CI images update

--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-08-10 16:58:46
+lastsearch = 2024-08-10 20:36:31
 
 [shadow.vn]
 match = -140.0%%
@@ -77,9 +77,9 @@ title = Camera nhiệt HT-18 - Huatec Việt Nam
 url = https://huatec.net/camera-nhiet-ht-18/
 
 [shopee.vn]
-match = -200.0%%
-title = Đèn Pin Đội Đầu HT18 Chống Nước, Siêu Sáng Chiếu Xa ...
-url = https://shopee.vn/Đèn-Pin-Đội-Đầu-HT18-Chống-Nước-Siêu-Sáng-Chiếu-Xa-500m-Có-đèn-báo-pin-Cổng-USB-sạc-ĐT-i.275932437.22247539267
+match = -120.0%%
+title = Nhiệt kế hồng ngoại có Camera Ảnh Nhiệt HT-18
+url = https://shopee.vn/Nhiệt-kế-hồng-ngoại-có-Camera-Ảnh-Nhiệt-HT-18-i.176400794.8412628845
 
 [pintrongtin.com]
 match = -193.3%%
@@ -93,8 +93,8 @@ url = https://sieuthicamtay.com.vn/camera-nhiet-do-cam-tay-ht-18
 
 [www.thietbidiendgp.vn]
 match = -166.7%%
-title = Đèn Led Siêu Mỏng Tròn HT 18W HT MAX LIGHT | ST-18T
-url = https://www.thietbidiendgp.vn/products/den-led-sieu-mong-tron-ht-18w
+title = Đèn mâm nổi led HT, 18W Vuông HT MAX LIGHT | MV-18T
+url = https://www.thietbidiendgp.vn/products/den-mam-noi-led-ht-18w-vuong
 
 [dangquanglighting.com]
 match = -33.3%%
