--- a/images/chieu-dieu-hoa-lua-140x190/config.ini
+++ b/images/chieu-dieu-hoa-lua-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190.html
 lastopen = 2024-08-08 17:47:40
 
 [search]
-lastsearch = 2024-08-10 19:29:19
+lastsearch = 2024-08-10 20:29:51
 
 [www.diepxuan.com]
 match = 23.1%%
 title = Chiếu điều hòa lụa 140x190 kèm gối - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190-kem-goi.html
+url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190-kem-goi.html?srsltid=AfmBOoqPEKmV2bheQQYDhveQZpjVHTW-QpuR_ctFTMn0ZIL_hp3jXZwU
 
 [chieutrelanlan.com]
 match = 30.8%%
@@ -22,9 +22,9 @@ title = Chiếu điều hoà sợi mây- Chiếu Ngủ (140x190cm) hàng ...
 url = https://www.lazada.vn/products/chieu-dieu-hoa-soi-may-chieu-ngu-140x190cm-hang-vn-cao-cap-chat-luong-cao-thoang-mat-i2037665974.html
 
 [demxanh.com]
-match = 34.6%%
-title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html
+match = 0.0%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoq1KtQVyEyoqljUFdC-nRSmIKqTXDLcHlxwEZ0B0bWZsqTizmfa
 
 [tiki.vn]
 match = -11.5%%
@@ -32,9 +32,9 @@ title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu lụa điều hòa
 
 [shopee.vn]
-match = -34.6%%
-title = Chiếu Điều Hòa Viền Lụa Phong Anh Loại Dầy Sợi Mây ...
-url = https://shopee.vn/Chiếu-Điều-Hòa-Viền-Lụa-Phong-Anh-Loại-Dầy-Sợi-Mây-Tổng-Hợp-Cao-Cấp-Chiếu-Điều-Hòa-Thông-Minh-Thoáng-Khí-Mát-Rượi-i.81313558.13044100887
+match = -11.5%%
+title = chiếu điều hoà giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [thegioidemviet.vn]
 match = -19.2%%
