--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-10 19:35:13
+lastsearch = 2024-08-10 20:29:11
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -333.3%%
-title = TUI Group leading the way in support for guests and hotel ...
-url = https://www.tuigroup.com/en-en/media/press-releases/2024/2024-06-06-tui-group-leading-the-way-in-support-for-guests-and-hotel-partners-amid-fti-insolvency
+match = 8.3%%
+title = Press releases
+url = https://www.tuigroup.com/en-en/media/press-releases
 
 [www.tui.nl]
 match = -316.7%%
@@ -34,12 +34,12 @@ url = https://embraer.com/global/en/news?slug=1207114-tui-selects-embraer-e195-e
 [davidtrubridge.com]
 match = -200.0%%
 title = Tūī
-url = https://davidtrubridge.com/au/lighting/tui
+url = https://davidtrubridge.com/global/lighting/tui
 
 [www.linkedin.com]
-match = -200.0%%
-title = TUI
-url = https://www.linkedin.com/company/tuigroup
+match = -50.0%%
+title = Tui Allen - Ticketmaster
+url = https://www.linkedin.com/in/tuiallen
 
 [www.diepxuan.com]
 match = -133.3%%
@@ -72,9 +72,9 @@ title = TUI Cruises 10 April 2024
 url = https://www.cruisetimetables.com/tuicruises-10apr2024.html
 
 [www.lightology.com]
-match = -200.0%%
-title = Tui Pendant by David Trubridge - Lightology
-url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441
+match = -316.7%%
+title = Tui Pendant by David Trubridge | TUI-SMAL-BMB-WHI-KIT- ...
+url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441&srsltid=AfmBOorEKmbbA5S6PjLDR3qsD-A70Kg6PE5jy8wFJShTpzrXk78TFn2g
 
 [vitalimpacts.org]
 match = -91.7%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = 36.4%%
-title = tui sitemap
-url = https://www.tui.co.uk/sitemap
+match = -258.3%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [maritime-executive.com]
 match = -316.7%%
@@ -525,4 +525,14 @@ url = https://www.federalregister.gov/documents/2024/08/08/2024-17249/endangered
 match = -225.0%%
 title = TUI AG rejoins MDAX on Frankfurt Stock Exchange
 url = https://avitrader.com/2024/06/28/tui-ag-rejoins-mdax-on-frankfurt-stock-exchange/
+
+[www.tuj.ac.jp]
+match = -333.3%%
+title = Temple University, Japan Campus: Study in Japan in English
+url = https://www.tuj.ac.jp/
+
+[tifluidsystems.com]
+match = -266.7%%
+title = TI Fluid Systems – Empowering the Future of Mobility
+url = https://tifluidsystems.com/
 
