--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-10 15:52:36
+lastsearch = 2024-08-10 20:34:04
 
 [www.youtube.com]
 match = -40.7%%
@@ -19,7 +19,7 @@ url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-die
 [jysk.vn]
 match = -33.3%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOooUtExbd6N6HbIfAH5DKHGNSU0taIYL2cHyPyccgKHJhmX4e-IF
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOoowXj5hOUQuJ-xrsC4_IPZRzWevJ57bZelTZHZEKgwvvqcsZr1G
 
 [elambo.vn]
 match = -3.7%%
@@ -47,9 +47,9 @@ title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
 url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
-match = -44.4%%
-title = Cách chặn tất cả cuộc gọi đến Viettel, MobiFone ...
-url = https://www.thegioididong.com/hoi-dap/cach-chan-cuoc-goi-den-mang-viettel-mobifone-vinaphone-1363346
+match = -63.0%%
+title = Cách chặn, bỏ chặn Facebook trên điện thoại, máy tính ...
+url = https://www.thegioididong.com/hoi-dap/huong-dan-chan-va-huy-chan-tai-khoan-facebook-1037037
 
 [dienmaycholon.vn]
 match = -44.4%%
@@ -102,9 +102,9 @@ title = Chàng trai không chân khoe con đầu lòng sau đám cưới 1 ...
 url = https://www.avakids.com/me-va-be/chang-trai-khong-chan-khoe-con-dau-long-1487037
 
 [www.tiktok.com]
-match = -55.6%%
-title = Sa thải nhân viên nhưng quên không không chặn quyền truy ...
-url = https://www.tiktok.com/@cafef_official/video/7383144769330990354
+match = -3.7%%
+title = Người vợ trong mơ kiểu @Long Chun🎭 | Ha Linh
+url = https://www.tiktok.com/@tunpham97/video/7400245880265198855
 
 [www.nguoi-viet.com]
 match = 29.6%%
@@ -189,7 +189,7 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 [dienmaycholon.com]
 match = -44.4%%
 title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOoo0VqvseoO86GNOmsgjfXQjLcdD6KPcM8EHncbISTOTL83qZbkU
+url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOoqGAcWh7SFkGNopH-zlwvmuxbncl_YrtyO2xsYhOmmo3yXbFuGk
 
 [metruyen.me]
 match = 33.3%%
