--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -12,9 +12,9 @@ title = vo goi tua lung - Vỏ gối vuông tựa lưng size 45x45cm
 url = https://www.lazada.vn/products/vo-goi-vuong-tua-lung-size-45x45cm-khong-co-ruot-goi-vo-goi-vuong-vo-goi-tua-lung-i222145077.html
 
 [shopee.vn]
-match = -140.0%%
-title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
-url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
+match = 13.3%%
+title = Vỏ gối vuông Dollar 45-45cm
+url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
 
 [jysk.vn]
 match = -166.7%%
@@ -179,7 +179,7 @@ url = https://sinhvien.ufm.edu.vn/hotFerrID.html
 [foreverbedding.net]
 match = -153.3%%
 title = Bộ Sưu Tập Vỏ Gối Cao Cấp Đẹp Mê Ly Tại FOREVER
-url = https://foreverbedding.net/vo-goi?srsltid=AfmBOoqOY2mRddLKgA_PoP7-6_c59XDcz4Im1BCsbisrVr2PbLMzqR-f
+url = https://foreverbedding.net/vo-goi
 
 [www.yelp.com]
 match = -166.7%%
