--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 23:47:13
 lastsearch = 2024-08-10 20:17:01
 
 [chanrathanhthuy.com]
-match = -9.7%%
-title = Nên chọn màu sắc chăn ga gối đệm theo tuổi chồng hay vợ
-url = https://chanrathanhthuy.com/tin-tuc/nen-chon-mau-sac-chan-ga-goi-dem-theo-tuoi-chong-hay-vo-1273.html
+match = -3.2%%
+title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
 match = 38.7%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Singapore King Luxury KL2418
 url = https://demxanh.com/bo-chan-ga-goi-singapore-king-luxury-kl2418.html?srsltid=AfmBOooXgDfbYVvstxYDJIMMNvIbSmuvXUgq9ht2v-QOy_xD-8_uz4-b
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UT24 203
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
+match = 8.7%%
+title = Bộ sản phẩm SH_BC22 059
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-059
 
 [changagoidemsonghong.com]
 match = 9.7%%
