--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -116.7%%
-title = Bộ Ga (Drap) Nệm Cotton Đặc Biệt Edena Mẫu 524
-url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-dac-biet-edena-mau-524-chinh-hang-cao-cap
+match = -105.6%%
+title = Bộ Ga (Drap) Nệm Cotton Solid Edena Mẫu 358
+url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
@@ -52,9 +52,9 @@ title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
 url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xam
 
 [everonvn.com.vn]
-match = 27.8%%
-title = Bộ Everon Esm-20011
-url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
+match = 16.7%%
+title = Bộ Everon Epm-19061
+url = https://everonvn.com.vn/everon/752/bo-everon-epm19061
 
 [www.everonvni.vn]
 match = -77.8%%
@@ -72,9 +72,9 @@ title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
-match = -33.3%%
-title = Bộ Chăn Ga Gối Modal Cotton MC13
-url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
+match = 33.3%%
+title = Bộ Chăn Ga Gối Eu04
+url = https://antbedding.com/bo-chan-ga-goi-eu04
 
 [www.mym.com.vn]
 match = -57.1%%
