--- a/images/chieu-dieu-hoa-lua-160x200/config.ini
+++ b/images/chieu-dieu-hoa-lua-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 lastopen = 2024-08-02 20:47:57
 
 [search]
-lastsearch = 2024-08-10 17:26:40
+lastsearch = 2024-08-10 20:31:13
 
 [demxanh.com]
 match = 3.8%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoq-eTuuQwnGEdO99kM1dvAoGWZLFWcjFyNdjfbNK9IY__FFZaAn
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [thegioidemviet.vn]
 match = -15.4%%
@@ -24,7 +24,7 @@ url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html
 [foreverbedding.net]
 match = 38.5%%
 title = Chiếu điều hòa - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa?srsltid=AfmBOorgzOGiTentCiCaIIfEfloVD9XMFcGaPsdsRmHiLoLD1Aaxvjwy
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [chieutrelanlan.com]
 match = 42.3%%
@@ -44,7 +44,7 @@ url = https://shopee.vn/Chiếu-điều-hoà-sợi-mây-tự-nhiên-chiếu-mát
 [www.lazada.vn]
 match = -46.2%%
 title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html?srsltid=AfmBOoqPER9zgJAJ0fvJuIKxjHwO6WrqumvNPqxXfvPBFu4nJvmDiOgK
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [nanara.vn]
 match = 7.7%%
