--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-10 18:13:55
+lastsearch = 2024-08-10 20:31:34
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -127,9 +127,9 @@ title = Hướng dẫn quần chúng nhân dân và các đoàn đến viếng .
 url = https://xaydungchinhsach.chinhphu.vn/tphcm-huong-dan-quan-chung-nhan-dan-va-cac-doan-den-vieng-tong-bi-thu-nguyen-phu-trong-119240724110435557.htm
 
 [thuvienphapluat.vn]
-match = -95.8%%
-title = Thông tư 36/2019/TT-BLĐTBXH Danh mục máy thiết bị vật ...
-url = https://thuvienphapluat.vn/van-ban/Lao-dong-Tien-luong/Thong-tu-36-2019-TT-BLDTBXH-Danh-muc-may-thiet-bi-vat-tu-chat-co-yeu-cau-nghiem-ngat-an-toan-435472.aspx
+match = -79.2%%
+title = Thông tư 12/2019/TT-BCT xuất xứ hàng hóa trong Hiệp ...
+url = https://thuvienphapluat.vn/van-ban/Xuat-nhap-khau/Thong-tu-12-2019-TT-BCT-xuat-xu-hang-hoa-trong-Hiep-dinh-khung-ve-hop-tac-kinh-te-toan-dien-420674.aspx
 
 [tamanhhospital.vn]
 match = -91.7%%
@@ -270,4 +270,9 @@ url = http://customs.gov.vn:8228/index.jsp?pageId=2&aid=157500&cid=25
 match = -100.0%%
 title = Trang chủ :: Công ty Xăng dầu Khu vực II (Petrolimex Saigon)
 url = https://kv2.petrolimex.com.vn/
+
+[dsht.vn]
+match = -66.7%%
+title = Lịch trực lãnh đạo Công ty ngày 03 và 04 tháng 8 năm 2019
+url = http://dsht.vn/lich-cong-tac/lich-cong-tac-lanh-dao-cong-ty/lich-truc-lanh-dao-cong-ty-ngay-03-va-04-thang-8-nam-2019.html
 
