--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-10 18:44:32
+lastsearch = 2024-08-10 20:36:53
 
 [munghoangphat.com]
 match = 12.0%%
@@ -12,9 +12,9 @@ title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
 url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
 
 [tiki.vn]
-match = -28.0%%
-title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=màn bung 16m có đáy
+match = -8.0%%
+title = Màn đỉnh vuông hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [shopee.vn]
 match = -48.0%%
@@ -22,9 +22,9 @@ title = Màn chụp vuông - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
 url = https://shopee.vn/list/màn chụp/vuông
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
-url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-rong-1m6-x-2m-bao-bao.html
+match = -32.0%%
+title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
+url = https://www.mungbaobao.com/
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = Màn chụp tự bung đỉnh vuông cao cấp
 url = https://demvip.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap
 
 [www.lazada.vn]
-match = 4.0%%
-title = MÙNG CHỤP TỰ BUNG ĐỈNH VUÔNG MÀN CHỤP KIỂU ...
-url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html
+match = -24.0%%
+title = Mùng Chụp Cao Cấp Có Viền Chống Muỗi-Màn ...
+url = https://www.lazada.vn/products/mung-chup-man-chup-tu-bung-dinh-vuong-cao-cap-man-chup-chong-muoi-man-chup-tu-bung-chan-vien-lua-hang-viet-nam-chat-luong-cao-man-chup-tu-bung-mung-chup-cao-cap-co-vien-chong-muoi-man-chup-gap-gon-nhieu-kich-thuoc-i2281896666.html?srsltid=AfmBOoqnEgIPVpbMQeHjc2UzTAY2uDfq_jFb_sumJLEN7mAgb_kkRCqi
 
 [everonvn.com.vn]
 match = 0.0%%
