--- a/images/nem-dreamland-uc-150x190x09/config.ini
+++ b/images/nem-dreamland-uc-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-dreamland-uc-150x190x09.html
 lastopen = 2024-06-06 16:44:38
 
 [search]
-lastsearch = 2024-08-10 17:18:15
+lastsearch = 2024-08-10 20:27:49
 
 [www.diepxuan.com]
 match = 44.4%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOoov0RlHy3SMhf8-4nDy1V391MxV60QcLEMQJLV2DucG_r0xJS3Y
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [my90acres.com]
 match = 23.8%%
