--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-10 16:29:22
+lastsearch = 2024-08-10 20:37:54
 
 [www.lazada.vn]
 match = -105.6%%
@@ -22,9 +22,9 @@ title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
 url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -155.6%%
+title = TOP 12 thương hiệu nệm cao su khuyến mãi, giá rẻ tại ...
+url = https://thegioinem.com/top-12-thuong-hieu-nem-cao-su-khuyen-mai-gia-re-tai-thegioinem-com.html
 
 [www.facebook.com]
 match = -155.6%%
@@ -38,8 +38,8 @@ url = https://eva.vn/bep-eva/9x-goi-nem-10-cai-dep-nhu-10-nho-meo-cuc-hay-tru-do
 
 [www.tiktok.com]
 match = -144.4%%
-title = Quán nem nướng núp hẻm siêu ngon ở Gò Vấp, tuổi đời 12 ...
-url = https://www.tiktok.com/@reviewcungphuocnhe/video/7249391511442296069
+title = Chắc nhiều bạn đã nghe đến Nem Chua chị Hạnh. Phải ...
+url = https://www.tiktok.com/@ngdangdung/video/7237496309215726853
 
 [www.youtube.com]
 match = -150.0%%
