--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-10 17:47:56
+lastsearch = 2024-08-10 20:43:04
 
 [en.wikipedia.org]
 match = -31.2%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=90f0e14791cac1c8&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiEjfXwn-qHAxVBMlkFHUNNK-MQsZYEegQIWBAC
+url = https://www.google.com/search?sca_esv=6d4fb2762afaf7cd&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiSycCDx-qHAxV1DDQIHaxWCNoQsZYEegQIUhAC
 
 [produccionesitaca.es]
 match = -21.4%%
