--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-10 18:23:43
+lastsearch = 2024-08-10 20:38:15
 
 [www.reddit.com]
 match = -82.6%%
@@ -337,8 +337,8 @@ title = Original Article
 url = https://synapse.koreamed.org/articles/1119644
 
 [www.svcleanenergy.org]
-match = 0.0%%
-title = Silicon Valley Clean Energy
+match = -82.6%%
+title = 2021-0310-SVCE-Board-Meeting-Agenda-Packet- ...
 url = https://www.svcleanenergy.org/wp-content/uploads/2020/02/2021-0310-SVCE-Board-Meeting-Agenda-Packet-compressed.pdf
 
 [docs.deerfield.il.us]
@@ -625,4 +625,9 @@ url = https://www.oregon.gov/osp/Docs/NCICCodeManual.pdf
 match = -13.0%%
 title = 1982-05-05 - Orange Coast Pilot
 url = https://ecms.newportbeachca.gov/WEB/DocView.aspx?id=1326419&dbid=0&repo=CNB
+
+[www.bloomberg.com]
+match = -18.8%%
+title = Bloomberg Europe
+url = https://www.bloomberg.com/europe
 
