CI images update

--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-08-10 17:37:38
+lastsearch = 2024-08-10 20:47:10
 
 [shopee.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Mai Huyền - Chiếu nhựa cao cấp - Hanoi
 url = https://www.maihuyencorp.com/
 
 [www.lazada.vn]
-match = -13.8%%
-title = ☫❉♤ Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ ...
-url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html
+match = -31.0%%
+title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
 
 [tiki.vn]
 match = -13.8%%
@@ -180,4 +180,9 @@ url = https://cskh.hcmpc.com.vn/public/files/DIEN_NLMT_AM/2020-10-08_Bao cao dan
 match = 23.8%%
 title = Chiếu nhựa 0,9m x 1m9
 url = https://linhkienlammusic.com/chieu-nhua-09m-x-1m9
+
+[h5.lazada.vn]
+match = -31.0%%
+title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
+url = https://h5.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477-s6543709402.html
 
