--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-08-10 16:19:05
+lastsearch = 2024-08-10 20:45:32
 
 [www.diepxuan.com]
 match = 37.5%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOorXNXvDxC309RVPbIc3mjqPIz1TQWGkyU7ueYX7Y4S4ZSq45zwE
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [changagoidemdep.vn]
 match = -12.5%%
