--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-10 20:03:33
+lastsearch = 2024-08-10 20:58:13
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
 match = 4.3%%
-title = Bộ sản phẩm SH_BC23 072
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-73
+title = Bộ sản phẩm SH_BC23 082
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-082
 
 [everon.online]
 match = 50.0%%
@@ -114,7 +114,7 @@ url = https://changagoidemsonghong.online/ga-goi-song-hong-basic-bc24107.html
 [everonvn.com.vn]
 match = -23.5%%
 title = Bảng giá bộ chăn ga gối Everon Ep1523 Hàn Quốc màu hoa ...
-url = https://everonvn.com.vn/everon/273/everon-ep-1523?srsltid=AfmBOopR7PH_1Kl06H_n-CFivjZdf0Su-fkMQYSpURSQFwc_B40e0Thw
+url = https://everonvn.com.vn/everon/273/everon-ep-1523
 
 [staging.happynest.com.vn]
 match = -8.8%%
