--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-10 15:46:02
+lastsearch = 2024-08-10 20:53:04
 
 [www.instagram.com]
-match = -223.1%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+match = -15.4%%
+title = Hoi Chan (@hoichandraws)
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [hk.linkedin.com]
-match = -276.9%%
-title = Chow hoi ting Chow - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -253.8%%
@@ -224,7 +224,7 @@ url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 [shopee.vn]
 match = -176.9%%
 title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/
+url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/ 
 
 [hongkongfp.com]
 match = -269.2%%
@@ -380,4 +380,9 @@ url = https://zmj.unibo.it/article/view/19527/18122
 match = -138.5%%
 title = Christian Dior Couture: Employee Directory
 url = https://www.zoominfo.com/pic/christian-dior-couture/507370824
+
+[jingdaily.com]
+match = -253.8%%
+title = 126M Chinese viewers tune in to Dior's Paris Fashion ...
+url = https://jingdaily.com/posts/dior-paris-fashion-week-show-china-views
 
