--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-10 19:35:54
+lastsearch = 2024-08-10 20:46:11
 
 [www.diepxuan.com]
 match = -13.3%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOoq_NynZigeycYjU4yBWyzNLvaRTeYq-chPxnug4_Vfw9F0QGL46
 
 [www.htlight.vn]
 match = -26.7%%
@@ -67,9 +67,9 @@ title = Đèn chiếu sáng HT MAX LIGHT
 url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang
 
 [www.lazada.vn]
-match = -200.0%%
-title = Hộp Phân Phối Điện Chiếu Sáng Gia Dụng 5/8/12/15/18/ ...
-url = https://www.lazada.vn/products/hop-phan-phoi-dien-chieu-sang-gia-dung-5812151824-cach-ht-series-hop-day-noi-chong-tham-nuoc-i1491178233.html
+match = -246.7%%
+title = Đèn led âm trần siêu mỏng HT Light Level tròn, công suất ...
+url = https://www.lazada.vn/products/den-led-am-tran-sieu-mong-ht-light-level-tron-cong-suat-15w-2-loai-anh-sang-trang-vang-hang-chinh-hang-i1620479452.html?srsltid=AfmBOoqfCf1lVhTijoI30nBFwmaYy9YBHKGW-9kOBmDrZ3NrJqtMZV-r
 
 [www.boa.gov.vn]
 match = -146.7%%
@@ -224,5 +224,5 @@ url = https://hachi.com.vn/den-led-trong-cay-noi-that-hc50w/
 [luxbath.vn]
 match = -73.3%%
 title = Phòng xông hơi khô Daros HT-15 1.2m
-url = https://luxbath.vn/phong-xong-hoi-kho-daros-ht-15-1-2m-p11828.html
+url = https://luxbath.vn/phong-xong-hoi-kho-daros-ht-15-1-2m-p11828.html?srsltid=AfmBOopLPJ8-D-r1TIqral4e1fWuJZP2aniNiHWcLsM4VCGsOd4yLy7b
 
