--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-10 10:25:57
+lastsearch = 2024-08-10 20:50:20
 
 [chieutrelanlan.com]
 match = -16.7%%
@@ -77,9 +77,9 @@ title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [demxanh.com]
-match = 25.0%%
-title = Chiếu trúc hạt Hương Trúc nâu cà phê
-url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html
+match = -37.5%%
+title = Chuyên cung cấp chiếu trúc hạt các hãng hàng ...
+url = https://demxanh.com/chieu-truc-hat.html
 
 [www.diepxuan.com]
 match = 100.0%%
