--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-10 17:44:47
+lastsearch = 2024-08-10 20:54:50
 
 [erado.vn]
 match = 0.0%%
@@ -107,9 +107,9 @@ title = (FREESHIP) Thảm chân giường, thảm bếp dài 1m6-50 ...
 url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-dep-hang-co-san/
 
 [www.lazada.vn]
-match = 15.0%%
-title = Thảm Giường Ngủ Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/tham-giuong-ngu/
+match = -70.0%%
+title = 80X200Cm Thảm Để Cạnh Giường Phòng Ngủ Chống- ...
+url = https://www.lazada.vn/products/80x200cm-tham-de-canh-giuong-phong-ngu-chong-mua-thu-tham-lot-san-dem-chieu-be-tham-bo-i1029420769.html
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -227,9 +227,9 @@ title = size áo anh đức - giải pháp kỹ thuật hàng đầu
 url = https://sinhvien.ufm.edu.vn/hot/XqzT/
 
 [www.tiktok.com]
-match = -72.7%%
-title = Avcm71328u6
-url = https://www.tiktok.com/discover/avcm71328u6
+match = -120.0%%
+title = Trả lời @honnguyen9x Máy đưa võng thì khung võng nào ...
+url = https://www.tiktok.com/@xuongvongnamtrang/video/7179427005300034843
 
 [www.binhduong.gov.vn]
 match = -30.0%%
@@ -280,4 +280,24 @@ url = https://www.mdfuni.com/san-pham/combo-giuong-tu-hien-dai-nhap-khau-mdc-14/
 match = -95.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 14 | SMLIFE.vn
 url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-14
+
+[hanvico.com.vn]
+match = -10.0%%
+title = HANVICO - ẤM ÁP NHƯ LÒNG MẸ
+url = https://hanvico.com.vn/
+
+[forums.dragonflycave.com]
+match = -95.0%%
+title = butterfly0035 | The Cave of Dragonflies forums
+url = https://forums.dragonflycave.com/members/butterfly0035.4075/
+
+[www.vinmec.com]
+match = -90.0%%
+title = Trẻ quấy khóc khi đặt nằm xuống: Phải làm thế nào?
+url = https://www.vinmec.com/vie/bai-viet/tre-quay-khoc-khi-dat-nam-xuong-phai-lam-nao-vi
+
+[znews.vn]
+match = -110.0%%
+title = Đằng sau giường 'chống sex' và bao cao su miễn phí ở ...
+url = https://znews.vn/dang-sau-giuong-chong-sex-va-bao-cao-su-mien-phi-o-olympic-paris-post1489804.html
 
