--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-10 15:17:38
+lastsearch = 2024-08-10 21:20:15
 
 [zhangbrickshop.com]
 match = -133.3
@@ -57,9 +57,9 @@ title = Xác định hàm lượng vitamin D2 từ một số loài nấm lớn 
 url = https://vjol.info.vn/index.php/vinhuni/article/download/51293/42137/
 
 [m.facebook.com]
-match = -180.0%%
-title = Học sinh Hà Nội | tìm b học D1 nguyễn gia thiều ạa
-url = https://m.facebook.com/groups/HocSinhHN/posts/1619811161998072/
+match = -33.3%%
+title = tìm trẻ lạc d2 NGT Long Biên✌️✌️✌️✌️✌️
+url = https://m.facebook.com/groups/HocSinhHN/posts/1619809158664939/
 
 [dkv.biz.vn]
 match = -166.7%%
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -26.7%%
-title = Vesta Lifestyle & Gifts
-url = https://www.facebook.com/VestaLifestyle/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [hoc247.vn]
 match = -213.3%%
