--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-10 20:29:11
+lastsearch = 2024-08-10 21:22:58
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = 8.3%%
-title = Press releases
-url = https://www.tuigroup.com/en-en/media/press-releases
+match = -333.3%%
+title = TUI Group leading the way in support for guests and hotel ...
+url = https://www.tuigroup.com/en-en/media/press-releases/2024/2024-06-06-tui-group-leading-the-way-in-support-for-guests-and-hotel-partners-amid-fti-insolvency
 
 [www.tui.nl]
 match = -316.7%%
@@ -34,12 +34,12 @@ url = https://embraer.com/global/en/news?slug=1207114-tui-selects-embraer-e195-e
 [davidtrubridge.com]
 match = -200.0%%
 title = Tūī
-url = https://davidtrubridge.com/global/lighting/tui
+url = https://davidtrubridge.com/au/lighting/tui
 
 [www.linkedin.com]
-match = -50.0%%
-title = Tui Allen - Ticketmaster
-url = https://www.linkedin.com/in/tuiallen
+match = -200.0%%
+title = TUI
+url = https://www.linkedin.com/company/tuigroup
 
 [www.diepxuan.com]
 match = -133.3%%
@@ -74,7 +74,7 @@ url = https://www.cruisetimetables.com/tuicruises-10apr2024.html
 [www.lightology.com]
 match = -316.7%%
 title = Tui Pendant by David Trubridge | TUI-SMAL-BMB-WHI-KIT- ...
-url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441&srsltid=AfmBOorEKmbbA5S6PjLDR3qsD-A70Kg6PE5jy8wFJShTpzrXk78TFn2g
+url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441
 
 [vitalimpacts.org]
 match = -91.7%%
