--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-10 20:38:55
+lastsearch = 2024-08-10 21:23:17
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -76.5%%
-title = xikers Members Profile (Updated!)
-url = https://kprofiles.com/xikers-members-profile/
+match = -70.6%%
+title = ATEEZ Members Profile (Updated!)
+url = https://kprofiles.com/ateez-members-profile/
 
 [www.qsc.com]
 match = -188.2%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -29.4%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOoopQrEv0C81KbYD9oavBqj4M6-x29KWJ_-ZQgMCA8IyVuMj3UmR
 
 [www.kvaser.cn]
 match = -5.9%%
