--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-10 21:00:39
+lastsearch = 2024-08-10 21:12:01
 
 [shopee.vn]
-match = 4.3%%
-title = Chiếu Trúc Cao Bằng - Chiếu trúc cá nhân
-url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Chiếu-trúc-cá-nhân-i.81313558.19277857647
+match = -52.2%%
+title = Chiếu Trúc Tre Cao Bằng Xịn Các Cỡ 0.8m/0.9m/1m/1.2 ...
+url = https://shopee.vn/Chiếu-Trúc-Tre-Cao-Bằng-Xịn-Các-Cỡ-0.8m-0.9m-1m-1.2m-1.4m-1.5m-1.6m-1.8m-2m-i.182611643.17934077095
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -32,9 +32,9 @@ title = Xưởng chiếu cây cao bằng | By Cơ sở SX chiếu Tre Việt ...
 url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=watchlist&__rv__=video_home_www_playlist_video_list&locale=cs_CZ
 
 [chieutrucsaigon.com]
-match = 30.4%%
-title = ĐỊA CHỈ BÁN CHIẾU CAO BẰNG HCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/dia-chi-ban-chieu-cao-bang-hcm-37.html
+match = -17.4%%
+title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
 
 [demxanh.com]
 match = -21.7%%
@@ -42,9 +42,9 @@ title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
 url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [baocaobang.vn]
-match = -43.5%%
-title = Chiếu trúc Cao Sơn – sản phẩm Việt được tin dùng
-url = https://baocaobang.vn/chieu-truc-cao-son-san-pham-viet-duoc-tin-dung-42036.html
+match = -13.0%%
+title = Độc đáo các sản phẩm từ trúc Cao Bằng
+url = https://baocaobang.vn/-3524.html
 
 [chieu.com.vn]
 match = -43.5%%
@@ -67,9 +67,9 @@ title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu-truc-cao-bang-778155
 
 [www.facebook.com]
-match = -52.2%%
-title = Chiếu trúc Cao Bằng, Chiếu trúc thanh, Chiếu trúc cây
-url = https://www.facebook.com/chieutrucvietso1/
+match = -73.9%%
+title = Chiếu Trúc Cao Bằng Cao Sơn dòng đối mục loại 1 | ‼️Địa ...
+url = https://www.facebook.com/demhong.vn/videos/chiếu-trúc-cao-bằng-cao-sơn-dòng-đối-mục-loại-1/843056673315667/?locale=de_DE
 
 [www.youtube.com]
 match = -95.7%%
@@ -127,9 +127,9 @@ title = Truang Thj Anh Tuylt va Dtg Tgp chi KHOA HQC & CONG NGHE
 url = https://sti.vista.gov.vn/file_DuLieu/dataTLKHCN//CTv178/2013/CTv178V112S12-22013125.pdf
 
 [caobangtv.vn]
-match = -185.7%%
-title = Thời sự
-url = http://caobangtv.vn/video-c24/thoi-su.html
+match = 30.0%%
+title = Truyền hình Cao Bằng
+url = http://caobangtv.vn/
 
 [langson.gov.vn]
 match = -73.9%%
@@ -165,4 +165,9 @@ url = https://support.apple.com/vi-vn/guide/iphone/iph341d4a993/ios
 match = 17.4%%
 title = Hội Nông dân tỉnh Cao Bằng
 url = https://hoinongdan.caobang.gov.vn/
+
+[sokhcn.caobang.gov.vn]
+match = -26.1%%
+title = Sở Khoa học và Công nghệ tỉnh Cao Bằng
+url = https://sokhcn.caobang.gov.vn/
 
