--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-10 20:30:12
+lastsearch = 2024-08-10 21:17:12
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -19,7 +19,7 @@ url = https://dungcuykhoakimminh.com/tag/ion&trang-19
 [mych.vn]
 match = -60.7%%
 title = Khay Đá 14 Ô Làm Đá Viên, Rau Câu, Trữ Đồ Ăn Dặm ... - Mych
-url = https://mych.vn/san-pham/khay-da-14-o-lam-da-vien-rau-cau-tru-do-an-dam-cho-be-co-nap-day.html
+url = https://mych.vn/san-pham/khay-da-14-o-lam-da-vien-rau-cau-tru-do-an-dam-cho-be-co-nap-day.html?srsltid=AfmBOoq9J2Crd3Q5fgCwyIHAf_CUaAHC5wpVrrro0JSYyo_YfwRliKcB
 
 [xn--chiabngvngloiworldcupkhuvcchu-8nc3a50cm302fybaw6p.nigioivietnam.vn]
 match = -60.7%%
@@ -187,9 +187,9 @@ title = Bản đồ website Dropbiz
 url = https://dropbiz.vn/ban-do-website-droppii
 
 [m.facebook.com]
-match = -5.6%%
-title = TƯ VẤN Dh ĐÀI LOAN
-url = https://m.facebook.com/DOHIENDUHOC/?comment_id=Y29tbWVudDoxMTAyNzE0MjkzNTQzODk0XzExMDI3Mjc1MjAyMDkyMzg=
+match = -82.1%%
+title = Rao vặt An Hữu - Cái Bè | Serum phục hồi trẻ hóa da đỉnh nhất ...
+url = https://m.facebook.com/groups/1958199444409629/posts/3858948817668006/
 
 [www.instagram.com]
 match = -64.3%%
