--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-08-10 20:45:32
+lastsearch = 2024-08-10 21:21:37
 
 [www.diepxuan.com]
 match = 37.5%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOookXefkSF2IacOfsl-HuPhQ1aXuqU4DN2OvTXalrlTDXxvE0yys
 
 [changagoidemdep.vn]
 match = -12.5%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/Đệm-Memory-Foam-Massage-Kawaii-Dreamland-Nệm-Công-
 [demxanh.com]
 match = 6.2%%
 title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html?srsltid=AfmBOoqfYucmp_L8nhTqWgqEMwY9PQy9PaSR_Pu90IXM85xt5WuL16uc
 
 [www.youtube.com]
 match = -43.8%%
