--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-10 20:54:50
+lastsearch = 2024-08-10 21:17:31
 
 [erado.vn]
 match = 0.0%%
@@ -107,9 +107,9 @@ title = (FREESHIP) Thảm chân giường, thảm bếp dài 1m6-50 ...
 url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-dep-hang-co-san/
 
 [www.lazada.vn]
-match = -70.0%%
-title = 80X200Cm Thảm Để Cạnh Giường Phòng Ngủ Chống- ...
-url = https://www.lazada.vn/products/80x200cm-tham-de-canh-giuong-phong-ngu-chong-mua-thu-tham-lot-san-dem-chieu-be-tham-bo-i1029420769.html
+match = 15.0%%
+title = Thảm Giường Ngủ Giá Tốt T08/2024
+url = https://www.lazada.vn/tag/tham-giuong-ngu/
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -300,4 +300,9 @@ url = https://www.vinmec.com/vie/bai-viet/tre-quay-khoc-khi-dat-nam-xuong-phai-l
 match = -110.0%%
 title = Đằng sau giường 'chống sex' và bao cao su miễn phí ở ...
 url = https://znews.vn/dang-sau-giuong-chong-sex-va-bao-cao-su-mien-phi-o-olympic-paris-post1489804.html
+
+[noithatgomay.vn]
+match = 45.0%%
+title = GG-G14 Giường ngủ 14
+url = https://noithatgomay.vn/san-pham/gg-g14-giuong-ngu-14
 
