--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-10 20:24:11
+lastsearch = 2024-08-10 21:24:23
 
 [www.lazada.vn]
 match = -27.8%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/tag/vo-goi-50x70-trang/
 [ru9.vn]
 match = -38.9%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOorHv1AM1QWdPz9WUX5yK03nvSLhzmHxRQ2kd1RsaYe12RUgq-7r
 
 [www.diepxuan.com]
 match = -55.6%%
@@ -49,7 +49,7 @@ url = {search_url}
 [ninhouse.vn]
 match = 44.4%%
 title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic
+url = https://ninhouse.vn/collections/vo-goi-nam-classic?srsltid=AfmBOopTNm_l3yALEiD-lp-wrY8P3n8pQEBUzUug4Goa1HXBOR5Fa9oh
 
 [tonybed.vn]
 match = 22.2%%
@@ -89,7 +89,7 @@ url = https://thegioidemviet.vn/vo-goi-khach-san/
 [demxanh.com]
 match = -155.6%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/vo-goi.html
+url = https://demxanh.com/vo-goi.html?srsltid=AfmBOorqa2KNkZsL6LdFwf89qV3woueLCZnqrhhkGoLqwVZGgA4CgAoF
 
 [templeshalom.ca]
 match = 0.0%%
@@ -394,5 +394,5 @@ url = https://ndma.gov.in/sites/default/files/PDF/ndmp-2019.pdf
 [sieuthidem.vn]
 match = -161.1%%
 title = Những mẫu áo gối 50 x 70 đẹp, độc và lạ cho tổ ấm của ...
-url = https://sieuthidem.vn/nhung-mau-ao-goi-50-x-70-dep-doc-va-la-cho-to-am-cua-gia-dinh/
+url = https://sieuthidem.vn/nhung-mau-ao-goi-50-x-70-dep-doc-va-la-cho-to-am-cua-gia-dinh/?srsltid=AfmBOopitBWA5uKuTccXYaSkHkJ8rC6XvjW5Gtp3wf3loIdj3xGgZ2bn
 
