CI images update

--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-10 20:27:18
+lastsearch = 2024-08-10 22:00:00
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Giá Bao Nhiêu?
 url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-gia-bao-nhieu-1132.html
 
 [www.facebook.com]
-match = 0.0%%
-title = Fujifilm Manufacturing Hải Phòng
-url = https://www.facebook.com/story.php/?story_fbid=899810658856646&id=100064831595772
+match = 29.2%%
+title = Chiếu Trúc Quế Lâm | Hai Phong
+url = https://www.facebook.com/ChieuTrucQueLam/
 
 [www.yellowpages.vn]
 match = -37.5%%
