--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-10 20:57:31
+lastsearch = 2024-08-10 22:01:26
 
 [www.diepxuan.com]
 match = 4.5%%
 title = Bộ ga chun coco 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
+url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html?srsltid=AfmBOooA19j8a0u_2zHKcPujd5aabSw2g5nzNgoF2AcpnnKKLSbJpVoy
 
 [shopee.vn]
 match = -54.5%%
@@ -29,7 +29,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 [www.lazada.vn]
 match = 27.3%%
 title = Ga gối chun nỉ COCO KHÔNG VIỀN
-url = https://www.lazada.vn/products/ga-goi-chun-ni-coco-khong-vien-i2477643141.html
+url = https://www.lazada.vn/products/ga-goi-chun-ni-coco-khong-vien-i2477643141.html?srsltid=AfmBOor60lcxZFm7ikOF1WBRpJzDqUnETshwreLbseej9YAkUInWPP2N
 
 [www.instagram.com]
 match = -81.8%%
@@ -49,7 +49,7 @@ url = https://www.sendo.vn/bo-ga-goi-ni-nhung-mau-xam-coco-1m6x2m-in-noi-hoa-tie
 [demxanh.com]
 match = -40.9%%
 title = Chiếu cao su non Coco bo chun màu xám nhạt
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html?srsltid=AfmBOoqjz1BVQx2_XLkwCS9RNzZBmDO-qZ1tfqthd0KYlR-7LBUBRo2L
 
 [www.tiktok.com]
 match = -9.1%%
