--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-10 12:24:37
+lastsearch = 2024-08-10 21:54:41
 
 [hanvico.com.vn]
-match = 38.1%%
-title = Bộ ga chun LIVING - LV18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
+match = 28.6%%
+title = Bộ ga chun My Youth - MY18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18
+url = https://foreverbedding.net/bo-ga-chun-velina-v18?srsltid=AfmBOoqMVTx-HCAwNxtLSn4hTgAb4ps-kDNxkSiiV0I9bCUd_-Q4RrPV
 
 [shopee.vn]
 match = -66.7%%
@@ -39,7 +39,7 @@ url = https://songhong.info/chan-ga-goi-uc020
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOorLICGJywWrxFmvfiYqAPI73lzCepR-dDp7pHSwm8pRKNyqG_Rq
 
 [hoangkimhome.com]
 match = -90.5%%
@@ -59,7 +59,7 @@ url = https://m.enbac.com/?page=list&province_id=ha-noi&cate_alias=&category_id=
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 18
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html?srsltid=AfmBOormciz0ZZ1C3CmKEhtW6E1utOJv606FcHV-q7C5An6wxYmN7qnP
 
 [dongahome.vn]
 match = -57.1%%
