--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-10 12:54:59
+lastsearch = 2024-08-10 22:00:43
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -42,14 +42,14 @@ title = Chăn Ga Gối Nệm Đẹp, Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/bo-vo-chan-goi-ga
 
 [songhong.info]
-match = 35.7%%
-title = Bộ chăn ga gối cao cấp mã UC22-018
-url = https://songhong.info/chan-ga-goi-uc018
+match = -17.9%%
+title = Mẫu chăn ga gối cao cấp dòng Urban mã mầu UC21-008
+url = https://songhong.info/chan-ga-goi-uc08
 
 [cuahangchangagoidem.com]
-match = -7.1%%
-title = 3 Bộ Chăn Ga Gối Đệm Màu Xám Sang Trọng Với Giá Tốt☑️
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-mau-xam/
+match = -10.7%%
+title = 22 Bộ Vỏ Chăn Ga Gối Đệm Đẹp, Nhiều Mẫu Mã Đẹp 2023
+url = https://cuahangchangagoidem.com/bo-vo-chan-ga-goi-dem-dep/
 
 [goni.vn]
 match = 7.1%%
@@ -62,9 +62,9 @@ title = Bedding
 url = https://ru9.vn/collections/bedding
 
 [quoccuongmattress.vn]
-match = -57.1%%
-title = Bộ chăn ga gối cotton 3D họa tiết lông vũ dùng 2 mặt nhiều ...
-url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-long-vu-dung-2-mat-nhieu-mau-da-dang/
+match = -60.7%%
+title = Bộ chăn ga gối cotton 3D họa tiết hoạt hình dùng 2 mặt nhiều ...
+url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-hoat-hinh-dung-2-mat-nhieu-mau-da-dang/
 
 [demxanh.com]
 match = -53.6%%
