--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-08-10 21:36:12
+lastsearch = 2024-08-10 21:52:33
 
 [www.tiktok.com]
-match = -83.3%%
-title = Nem Nướng can be super eazy to make at home using store ...
-url = https://www.tiktok.com/@nolimitcooking/video/7166486631006965034?lang=en
+match = -8.3%%
+title = Is Angelica Really Kelsie Mother
+url = https://www.tiktok.com/discover/is-angelica-really-kelsie-mother
 
 [www.reddit.com]
 match = -91.7%%
@@ -17,9 +17,9 @@ title = 22re/22r - Mechanic told me it was junk : r/ToyotaPickup
 url = https://www.reddit.com/r/ToyotaPickup/comments/12aw6b1/22re22r_mechanic_told_me_it_was_junk/
 
 [www.pirate4x4.com]
-match = 16.7%%
-title = 88 22RE has a miss in it
-url = https://www.pirate4x4.com/threads/88-22re-has-a-miss-in-it.398586/
+match = -20.8%%
+title = 22RE Running Rich - trying to diagnose
+url = https://www.pirate4x4.com/threads/22re-running-rich-trying-to-diagnose.2687366/
 
 [www.msextra.com]
 match = -70.8%%
