--- a/images/ruot-nem-warmdream-160x200x09/config.ini
+++ b/images/ruot-nem-warmdream-160x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-warmdream-160x200x09.html
 lastopen = 2024-06-11 23:30:20
 
 [search]
-lastsearch = 2024-08-10 20:59:15
+lastsearch = 2024-08-10 21:56:47
 
 [www.diepxuan.com]
 match = 58.6%%
 title = Điệp Xuân Ruột nệm Warmdream 180x200x05
-url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x05.html?srsltid=AfmBOooWrmMkWovveraw4H_9lP3aLUqPAKD0-bTeEo5fjPeBclcD9d8K
+url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x05.html
 
 [unofficialwarmoth.com]
 match = 0.0%%
