--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-10 20:34:04
+lastsearch = 2024-08-10 22:00:22
 
 [www.youtube.com]
 match = -40.7%%
@@ -19,7 +19,7 @@ url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-die
 [jysk.vn]
 match = -33.3%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOoowXj5hOUQuJ-xrsC4_IPZRzWevJ57bZelTZHZEKgwvvqcsZr1G
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOooEiFDVCM0CasWX1YnM961lOIFSy8ufEz3OKlSpcq_7AuuRqeDG
 
 [elambo.vn]
 match = -3.7%%
@@ -92,9 +92,9 @@ title = 80+ STT thất vọng về đàn ông, CAP mất niềm tin vào ...
 url = https://tiki.vn/blog/stt-that-vong-ve-dan-ong/
 
 [vietnamnet.vn]
-match = -37.0%%
-title = Chàng trai không chân Tô Đình Khánh khoe vợ mang thai
-url = https://vietnamnet.vn/chang-trai-khong-chan-to-dinh-khanh-khoe-vo-mang-thai-2079861.html
+match = -70.4%%
+title = Cô dâu hủy đám cưới vì nhà trai mời bạn gái cũ của chú rể ...
+url = https://vietnamnet.vn/co-dau-huy-dam-cuoi-vi-nha-trai-moi-ban-gai-cu-cua-chu-re-den-du-tiec-2310006.html
 
 [www.avakids.com]
 match = -63.0%%
@@ -147,9 +147,9 @@ title = Người góp phần làm khởi sắc bản biên giới Mùa Xuân
 url = https://www.bienphong.com.vn/nguoi-gop-phan-lam-khoi-sac-ban-bien-gioi-mua-xuan-post477378.html
 
 [m.facebook.com]
-match = -48.1%%
-title = Hội Khẩu Nghiệp - Hội Nhiều Chuyện | Cát Phượng nói thêm
-url = https://m.facebook.com/groups/572348384121798/posts/1272236694132960/
+match = -66.7%%
+title = Facebook Groups | Có phải con đường đến trái tim của một ...
+url = https://m.facebook.com/groups/groupyeubep/posts/2281831892200953/
 
 [vietbao.com]
 match = -22.2%%
@@ -189,7 +189,7 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 [dienmaycholon.com]
 match = -44.4%%
 title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOoqGAcWh7SFkGNopH-zlwvmuxbncl_YrtyO2xsYhOmmo3yXbFuGk
+url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOoqZ64cl6uo2r5EV6NsMGSUBF1Anx1kkyDmjkhv07TxDiKx-HDWS
 
 [metruyen.me]
 match = 33.3%%
