--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-10 20:13:52
+lastsearch = 2024-08-10 22:22:45
 
 [www.lazada.vn]
-match = -146.7%%
-title = vo goi tua lung - Vỏ gối vuông tựa lưng size 45x45cm
-url = https://www.lazada.vn/products/vo-goi-vuong-tua-lung-size-45x45cm-khong-co-ruot-goi-vo-goi-vuong-vo-goi-tua-lung-i222145077.html
+match = -193.3%%
+title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
 
 [shopee.vn]
 match = 13.3%%
