--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-10 21:13:42
+lastsearch = 2024-08-10 22:27:53
 
 [everon.online]
 match = 50.0%%
@@ -64,7 +64,7 @@ url = https://ninhouse.vn/collections/bo-chan-ga-goi-dem-cotton
 [jysk.vn]
 match = -26.5%%
 title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp | JYSK
-url = https://jysk.vn/ga-chun-140x200cm?srsltid=AfmBOopceD3vdrpSGRpxie6a_gZtvIqJN__ANZ3oyHAcZt_AXUiz-PSf
+url = https://jysk.vn/ga-chun-140x200cm
 
 [anpha.vuanem.com]
 match = 0.0%%
