--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-08-10 20:36:31
+lastsearch = 2024-08-10 22:12:34
 
 [shadow.vn]
 match = -140.0%%
@@ -93,8 +93,8 @@ url = https://sieuthicamtay.com.vn/camera-nhiet-do-cam-tay-ht-18
 
 [www.thietbidiendgp.vn]
 match = -166.7%%
-title = Đèn mâm nổi led HT, 18W Vuông HT MAX LIGHT | MV-18T
-url = https://www.thietbidiendgp.vn/products/den-mam-noi-led-ht-18w-vuong
+title = Đèn Led Siêu Mỏng Tròn HT 18W HT MAX LIGHT | ST-18T
+url = https://www.thietbidiendgp.vn/products/den-led-sieu-mong-tron-ht-18w
 
 [dangquanglighting.com]
 match = -33.3%%
