--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-10 18:19:32
+lastsearch = 2024-08-10 22:23:44
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -704,7 +704,7 @@ url = https://wayne.edu/
 [www.usnews.com]
 match = 0.0%%
 title = 
-url = https://www.usnews.com/best-colleges/morgan-state-university-2083
+url = https://www.usnews.com/best-colleges/jhu-2077
 
 [www.legodiscoverycenter.com]
 match = -186.7%%
@@ -713,7 +713,7 @@ url = https://www.legodiscoverycenter.com/washington-dc/whats-inside/events/lego
 
 [publicaccess.courts.state.mn.us]
 match = -166.7%%
-title = Home Page - Minnesota Court Records Online (MCRO)
+title = Minnesota Court Records Online (MCRO): Home Page
 url = https://publicaccess.courts.state.mn.us/
 
 [www.g-star.com]
