--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-10 20:17:44
+lastsearch = 2024-08-10 22:17:53
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -893,7 +893,7 @@ url = https://californiacourtrecords.us/criminal-court-records/inmate/
 
 [publicaccess.courts.state.mn.us]
 match = -166.7%%
-title = Home Page - Minnesota Court Records Online (MCRO)
+title = Minnesota Court Records Online (MCRO): Home Page
 url = https://publicaccess.courts.state.mn.us/
 
 [www.ussoccer.com]
