--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-08-10 21:29:39
+lastsearch = 2024-08-10 22:16:50
 
 [tuananh.vn]
 match = 12.0%%
@@ -12,9 +12,9 @@ title = Đệm bông ép 3 mảnh Korea Gấm
 url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
 
 [demxanh.com]
-match = -48.0%%
-title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+match = 8.0%%
+title = Đệm bông ép Tuấn Anh Korea Gấm Xốp
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam.html
 
 [demkhangduy.com]
 match = 25.0%%
@@ -87,14 +87,14 @@ title = đệm tuấn anh
 url = https://www.demgiare.net/tag/dem-tuan-anh
 
 [sieuthidemonline.vn]
-match = -76.0%%
-title = Đệm Korea Gấm Plus sự kết hợp bông Nano kháng khuẩn và ...
-url = https://sieuthidemonline.vn/dem-korea-gam-plus/
+match = -24.0%%
+title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
+url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
 
 [www.facebook.com]
-match = -80.0%%
-title = Chợ trời online Bay Area | Vào khoảng tháng 2 tôi có nhận ...
-url = https://www.facebook.com/groups/chotroionlinebayarea/posts/vào-khoảng-tháng-2-tôi-có-nhận-được-1-cuộc-gọi-của-1-em-gái-nhờ-tôi-đưa-ra-sân-b/1500939343845976/
+match = -64.0%%
+title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm | An Dương District
+url = https://www.facebook.com/tuananh.vn/?locale=vi_VN
 
 [m.facebook.com]
 match = -72.0%%
