--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-10 17:13:41
+lastsearch = 2024-08-10 22:26:51
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = 5.9%%
-title = Michael Rosenfeld
-url = https://profiles.ucsd.edu/michael.rosenfeld
+match = -15.0%%
+title = Abraham Palmer - UCSD Profiles
+url = https://profiles.ucsd.edu/abraham.palmer
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,14 +52,14 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -5.0%%
-title = Christopher Dvorak, MD
-url = https://profiles.ucsf.edu/christopher.dvorak
+match = -6.2%%
+title = Spencer Behr, MD
+url = https://profiles.ucsf.edu/spencer.behr
 
 [www.ncbi.nlm.nih.gov]
-match = -10.0%%
-title = Bacterial Terpenome - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
+match = -130.0%%
+title = Exercise in patients with inflammatory bowel diseases
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
 match = -41.7%%
