--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-10 18:27:09
+lastsearch = 2024-08-10 23:27:17
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -48,8 +48,8 @@ url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
 match = -187.5%%
-title = Cười 1000 Lần Vì Hài Quá Hay 👈 Hài Tuấn Dũng, Minh Dự ...
-url = https://www.youtube.com/watch?v=SGuVuoPPUdo
+title = Setup máy chiếu 3D cho dân bay lắc, đi cảnh, như thế nào ?
+url = https://www.youtube.com/watch?v=j4DyXxMsQoE
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -684,7 +684,7 @@ url = https://baolamdong.vn/xa-hoi/202408/cat-tien-quyet-liet-trien-khai-cac-bie
 [www.pnj.com.vn]
 match = -100.0%%
 title = Lắc Tay, Vòng Tay Vàng PNJ| pnj.com.vn
-url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/?srsltid=AfmBOorqvOc7WB71rxUEh-SXmdo9N5KXLrfy5KBcOeoEf2MhQryLnSpc
+url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/
 
 [www.tiktok.com]
 match = 27.3%%
