--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-10 18:46:15
+lastsearch = 2024-08-10 23:28:17
 
 [everonvn.com.vn]
 match = 15.8%%
 title = Bộ Everon Epm-19064
-url = https://everonvn.com.vn/everon/754/bo-everon-epm19064?srsltid=AfmBOoo1pB0Dc6b4EXWUna6eZ9rjaBm-SgrLKRkl54voZfv6jQlLb4nq
+url = https://everonvn.com.vn/everon/754/bo-everon-epm19064
 
 [everon.com.vn]
 match = 5.3%%
 title = BỘ EVERON EPC 19043
-url = https://everon.com.vn/epc-19043/?srsltid=AfmBOooSUzDDAR3Wq6iRR3HdkKGmG77kGKEkDfDe-BGzmF2iVRziNzz2
+url = https://everon.com.vn/epc-19043/
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOoqfk2_mVxIstm3dY26nfDzCztG3teLB9FiHzFUUMcrIIdDlvfZV
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
 
 [shopee.vn]
 match = -48.1%%
