--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-10 18:50:24
+lastsearch = 2024-08-10 23:20:03
 
 [demxanh.com]
 match = 37.0%%
@@ -42,8 +42,8 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 33.3%%
-title = Chiếu trúc trung quốc - Điệp Xuân
+match = 11.1%%
+title = Điệp Xuân Chiếu trúc trung quốc
 url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html
 
 [shopee.vn]
