--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-10 20:22:33
+lastsearch = 2024-08-10 23:14:57
 
 [www.everonvn.vn]
-match = 31.1%%
-title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
+match = 7.4%%
+title = ĐỆM LÒ XO EVERON, KING KOIL
+url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [demxanh.com]
-match = 29.8%%
-title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
+match = 27.9%%
+title = Đệm lò xo 1m6x2m (160x200cm) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m6x2m-160x200cm-gia-bao-nhieu.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -22,9 +22,9 @@ title = Nệm lò xo Kingkoil Cloud Firm
 url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
 
 [everonkorea.com]
-match = 23.4%%
-title = Đệm lò xo Kingkoil Cloud Firm cao 27cm - Everon Korea
-url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
+match = 31.8%%
+title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
+url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [everon.com.vn]
 match = 23.4%%
