--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-10 22:45:14
+lastsearch = 2024-08-10 23:27:37
 
 [en.wikipedia.org]
-match = -31.2%%
-title = Gwangju Uprising
-url = https://en.wikipedia.org/wiki/Gwangju_Uprising
+match = 8.7%%
+title = Korea under Japanese rule
+url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
 
 [www.britannica.com]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-88eZiahc&sig=ACfU3U1OKKy7su1PXp6GrPJTYIpXi8G8Qw&hl=en&sa=X&ved=2ahUKEwjvs9WGqs2HAxUJrYkEHSL2C14Q6AF6BAgqEAM
 
 [30rates.com]
-match = -39.1%%
-title = USD TO ZAR TODAY AND FORECAST TOMORROW ...
-url = https://30rates.com/usd-to-zar-today-forecast-dollar-to-rand
+match = -91.3%%
+title = USD to PHP forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
 
 [www.ncbi.nlm.nih.gov]
 match = -95.7%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=b5b06c2b2ff8ca96&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiMvNiq4uqHAxUAE1kFHUWpMqAQsZYEegQIWBAC
+url = https://www.google.com/search?sca_esv=ae5b53c4a4e2fa7f&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwi_05zn6-qHAxXjjIkEHbR4C1MQsZYEegQIWRAC
 
 [produccionesitaca.es]
 match = -21.4%%
