--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-10 16:29:43
+lastsearch = 2024-08-10 23:30:05
 
 [xoptraisan.info]
 match = -170.6%%
@@ -34,7 +34,7 @@ url = https://lombom.com/tham-ni-ghep-san-nha/
 [trieuchau.com]
 match = -129.4%%
 title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
-url = https://trieuchau.com/
+url = https://trieuchau.com/vi-vn/1053/Trang-Chu/Trang-1
 
 [www.facebook.com]
 match = 0.0%%
@@ -84,7 +84,7 @@ url = https://www.ssga.com/us/en/intermediary/etfs/funds/spdr-sp-oil-gas-explora
 [www.lazada.vn]
 match = -94.1%%
 title = [HCM]thảm xốp trải sàn - thảm ghép trải sàn
-url = https://www.lazada.vn/products/hcmtham-xop-trai-san-tham-ghep-trai-san-i287804887.html?srsltid=AfmBOoouAmuUIft6yiE_Mk4v0gNaCkqLEou8-z8RW8FgG3NhWlMGeLfc
+url = https://www.lazada.vn/products/hcmtham-xop-trai-san-tham-ghep-trai-san-i287804887.html
 
 [tiki.vn]
 match = -88.2%%
