--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-10 21:18:36
+lastsearch = 2024-08-10 23:21:06
 
 [www.tui.co.uk]
-match = -41.7%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = -58.3%%
+title = Asia Holidays 2024 / 2025
+url = https://www.tui.co.uk/destinations/asia/holidays-asia.html
 
 [uk.trip.com]
 match = -233.3%%
@@ -57,9 +57,9 @@ title = Hotel inkl. Flug Südkorea - Pauschalreisen
 url = https://www.tui.com/pauschalreisen/suedkorea/
 
 [www.linkedin.com]
-match = -175.0%%
-title = TUI on LinkedIn: #meinschiff | 14 comments
-url = https://www.linkedin.com/posts/tuigroup_meinschiff-activity-7123680492704423936-d0ri
+match = -200.0%%
+title = TUI
+url = https://www.linkedin.com/company/tuigroup
 
 [maritime-executive.com]
 match = -308.3%%
@@ -167,9 +167,9 @@ title = We Try A TUI Holiday - Are They Any Good?
 url = https://www.youtube.com/watch?v=qZBfXKzniEU
 
 [www.thenaturaladventure.com]
-match = -325.0%%
-title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
+match = -283.3%%
+title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
 
 [www.tripadvisor.com]
 match = -275.0%%
@@ -222,9 +222,9 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -325.0%%
-title = TUI Musement: Book Tickets for Experiences and Activities ...
-url = https://www.tuimusement.com/uk/
+match = -75.0%%
+title = Help Center - TUI Musement
+url = https://www.tuimusement.com/us/helpcenter/
 
 [www.dixondirectional.com]
 match = -166.7%%
@@ -460,4 +460,9 @@ url = https://www.airliners.net/forum/viewtopic.php?t=1479519
 match = -316.7%%
 title = Endangered Species Status for the Long Valley Speckled ...
 url = https://www.federalregister.gov/documents/2024/08/08/2024-17249/endangered-and-threatened-wildlife-and-plants-endangered-species-status-for-the-long-valley-speckled
+
+[www.tuigroup.com]
+match = 8.3%%
+title = Press releases
+url = https://www.tuigroup.com/en-en/media/press-releases
 
