CI images update

--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-10 20:58:13
+lastsearch = 2024-08-10 23:44:23
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -67,8 +67,8 @@ title = Bộ Chăn Ga ES 1840
 url = https://tongdailyeveron.com.vn/products/bo-chan-ga-es1840
 
 [songhong.info]
-match = 2.9%%
-title = Dòng chăn ga gối Sông Hồng Basic mã mầu BC-04
+match = 17.6%%
+title = Dòng chăn ga gối cotton Basic mã BC-04
 url = https://songhong.info/chan-ga-goi-bc-04
 
 [kona.com.vn]
