--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-10 21:49:46
+lastsearch = 2024-08-10 23:40:59
 
 [vinatools.com]
 match = -206.7%%
@@ -82,9 +82,9 @@ title = Ổ Cứng Để Bàn Lacie D2 Pro 16TB USB-C + SRS
 url = https://maiphuong.vn/products/o-cung-de-ban-lacie-d2-pro-16tb-usb-c-srs-stha16000800
 
 [www.instagram.com]
-match = -13.3%%
-title = MATTE Matcha & Teabar
-url = https://www.instagram.com/matte.teabar/?hl=en
+match = -44.4%%
+title = Instagram
+url = https://www.instagram.com/theb6.hanoi/p/C8Ty_9_tcCJ/
 
 [play.google.com]
 match = -193.3%%
