--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-08-10 22:30:13
+lastsearch = 2024-08-10 23:52:57
 
 [everon.online]
 match = 50.0%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 [everonvn.com.vn]
 match = 38.2%%
 title = Bộ Ga Chun At-04 Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/136/bo-he-everon?srsltid=AfmBOorM2sHaKi_G5CmAFu1ky8-FjVD8iug36216TM8nhkiLi27cRHca
+url = https://everonvn.com.vn/everon/136/bo-he-everon
 
 [tiki.vn]
 match = 29.4%%
@@ -83,8 +83,8 @@ url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [demxanh.com]
 match = -2.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 20
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-20.html?srsltid=AfmBOoqLQgVPgd3PGCD_y_5hr6gSS29tx9asdTwECECX1NYP36BYrZjb
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 17
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html
 
 [antbedding.com]
 match = 26.5%%
