--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-10 21:54:41
+lastsearch = 2024-08-10 23:40:38
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -14,17 +14,17 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18?srsltid=AfmBOoqMVTx-HCAwNxtLSn4hTgAb4ps-kDNxkSiiV0I9bCUd_-Q4RrPV
+url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
-match = -66.7%%
-title = ga chun bọc nệm giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=ga chun bọc nệm
+match = -52.4%%
+title = Bộ Chăn Ga Gối Cotton Poly 4 món - Happy Bedding
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Poly-4-món-Bộ-chăn-ga-bộ-ga-giường-drap-nệm-mền-Happy-Bedding-(Miễn-phí-bo-chun)-i.483546614.10240511269
 
 [changagoidemsonghong.com]
-match = -57.1%%
-title = Bộ chăn ga gối trẻ em mã TE19-09 khuyến mại -30%%
-url = https://changagoidemsonghong.com/chan-ga-goi-te19-09
+match = -14.3%%
+title = Chăn ga gối Home mã H17-048 Sale 30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
 
 [demsonghonghanoi.com]
 match = -14.3%%
@@ -39,7 +39,7 @@ url = https://songhong.info/chan-ga-goi-uc020
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOorLICGJywWrxFmvfiYqAPI73lzCepR-dDp7pHSwm8pRKNyqG_Rq
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
 
 [hoangkimhome.com]
 match = -90.5%%
@@ -59,7 +59,7 @@ url = https://m.enbac.com/?page=list&province_id=ha-noi&cate_alias=&category_id=
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 18
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html?srsltid=AfmBOormciz0ZZ1C3CmKEhtW6E1utOJv606FcHV-q7C5An6wxYmN7qnP
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html
 
 [dongahome.vn]
 match = -57.1%%
