--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-10 22:29:57
+lastsearch = 2024-08-10 23:37:09
 
 [shopee.vn]
 match = -152.6%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
-match = -136.8%%
-title = Nhạc Thiếu Nhi Vui Nhộn Bé Đến Khu Vui Chơi Thiếu Nhi ...
-url = https://www.youtube.com/watch?v=1kfm-HBh_-g
+match = -142.1%%
+title = Bé Khỏe Bé Ngoan ♫ Mai Vy - Thần Đồng Âm Nhạc Việt Nam ...
+url = https://www.youtube.com/watch?v=rSwTEpTTNY8
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -59,7 +59,7 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOopH3ZSBo013wkFskqX2EMhWbyHtxHdqPn-MBSjDAwd747jZx4DT
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
 match = -126.3%%
