--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-10 18:54:13
+lastsearch = 2024-08-10 23:49:14
 
 [demxanh.com]
-match = 3.4%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Tencel xanh nhạt
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOooevCynA6akslhD_bGbZDM4rLYhtnN5GiwaqVYeoIgiGTUULsYF
 
 [entershopping.vn]
 match = -13.8%%
@@ -49,12 +49,12 @@ url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 [thegioidemonline.com]
 match = 37.9%%
 title = Chiếu điều hòa cao su non Tencel màu Ghi
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html?srsltid=AfmBOorzYgVwkD67IaLHzquuxcshV86Vrx2FKB0b9bhBe-Rbx1wYWmoB
 
 [shopee.vn]
-match = -20.7%%
-title = chiếu điều hòa cao su non giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hòa cao su non
+match = 0.0%%
+title = chiếu điều hoà cao su non latex giá tốt Tháng 8, 2024
+url = https://shopee.vn/search?keyword=chiếu điều hoà cao su non latex
 
 [suongtuyet.com]
 match = 72.4%%
