--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-08-10 20:03:55
+lastsearch = 2024-08-10 23:41:20
 
 [shopee.vn]
-match = -24.0%%
-title = chiếu điều hòa kèm gối giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
+match = -4.0%%
+title = CHIẾU ĐIỀU HOÀ CAO SU NON CAO CẤP MODERN ...
+url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-CAO-SU-NON-CAO-CẤP-MODERN-(-video-quay-cận-chất)-i.46360011.4484797264
 
 [meoi.com.vn]
 match = 24.0%%
