--- a/images/ruot-goi-vuong-warmdream-45x45/config.ini
+++ b/images/ruot-goi-vuong-warmdream-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-vuong-warmdream-45x45.html
 lastopen = 2024-06-07 01:58:20
 
 [search]
-lastsearch = 2024-08-10 20:31:56
+lastsearch = 2024-08-10 23:37:53
 
 [bellizeno.com]
 match = -14.3%%
@@ -37,9 +37,9 @@ title = Gối tựa vuông hình doraemon 18 giá sỉ, giá bán buôn
 url = https://thitruongsi.com/goi-tua-vuong-hinh-doraemon-18-962168.html
 
 [elambo.vn]
-match = 53.3%%
-title = Ruột Gối Vuông Tựa Lưng Sofa 45x45cm
-url = https://elambo.vn/ruot-goi-vuong-45x45-elambo/
+match = 23.3%%
+title = Ruột Gối Vuông 40x40 cm Bông MICOROFIBER
+url = https://elambo.vn/ruot-goi-sofa-vuong-tua-lung-40x40/
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -67,8 +67,8 @@ title = Gối tựa Đệm Xanh giá rẻ tại Hà Nội
 url = https://demxanh.com/goi-tua-dem-xanh.html
 
 [www.lazada.vn]
-match = 3.3%%
-title = Ruột gối vuông , gối vương cao cấp hàng cao cấp
+match = -26.7%%
+title = Ruột gối vuông , gối vương cao cấp hàng cao cấp - Lazada
 url = https://www.lazada.vn/products/ruot-goi-vuong-goi-vuong-cao-cap-hang-cao-cap-i2405233379.html
 
 [www.fortheloveofport.com]
