--- a/images/vo-goi-dreamland-50x70-tr/config.ini
+++ b/images/vo-goi-dreamland-50x70-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tr.html
 lastopen = 2024-06-07 00:26:33
 
 [search]
-lastsearch = 2024-08-10 20:00:58
+lastsearch = 2024-08-10 23:43:42
 
 [furlife.vn]
 match = 70.8%%
@@ -170,4 +170,14 @@ url = https://octoberbedding.com/collections/vo-goi-nam
 match = 12.5%%
 title = The Billboard 1908-04-04
 url = https://upload.wikimedia.org/wikipedia/commons/7/7e/The_Billboard_1908-04-04-_Vol_20_Iss_14_(IA_sim_billboard_1908-04-04_20_14).pdf
+
+[www.qcyc.ca]
+match = -4.0%%
+title = {qdzti} Yeray infame no confio letra
+url = https://www.qcyc.ca/?q=node/109&height=730&scroll=auto&url=https://xn--75-6kc3bfr2e.xn--p1ai/4263875fe43y
+
+[www.future.museum.ru]
+match = -128.0%%
+title = Transporter tv led a plat Kids snippet hair salon Nicole endres ...
+url = http://www.future.museum.ru/lmp/link.asp?back=books/consept.htm&url=http://xn--b1amecrkpgh0d.xn--p1ai/pGoVS4afe43v
 
