CI images update

--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-08-10 23:47:30
 [www.diepxuan.com]
 match = 37.5%%
 title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOorOWnWqXhCCEY4uiEZtfkx0_yx5UuRdtGntnep2QSJ1NZ9dxboW
 
 [www.tripadvisor.com]
 match = -112.5%%
