--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-10 21:15:27
+lastsearch = 2024-08-10 23:49:47
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -20.0%%
-title = Đèn đường HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-duong-htlight
+match = -46.7%%
+title = Đèn mắt ếch chiếu điểm HT 8094 10W
+url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
 
 [www.htlightlevel.vn]
 match = -193.3%%
@@ -94,7 +94,7 @@ url = https://m.facebook.com/groups/648618483681727/posts/852387779971462/
 [www.diepxuan.com]
 match = -13.3%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOoofZeOjS4KM1vqiuG9OicG2UHnVLUg-cFdAvtNrMVfFEdH5p-Tn
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [huongtruc.com]
 match = -213.3%%
