--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-10 23:19:00
+lastsearch = 2024-08-10 23:50:08
 
 [www.youtube.com]
 match = -147.4%%
@@ -72,8 +72,8 @@ title = Cây hoa Mộc Hương
 url = https://qkhgarden.com/products/cay-hoa-moc-huong
 
 [guitanghoa.com]
-match = -157.9%%
-title = Cây Hoa Mộc Lan Là Hoa Gì? - Hình ảnh Và Ý nghĩa của chúng
+match = -147.4%%
+title = Cây Hoa Mộc Lan Là Hoa Gì? - Hình ảnh Và Ý nghĩa của ...
 url = https://guitanghoa.com/hoa-dep/cay-hoa-moc-lan/
 
 [vi.wikipedia.org]
