--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-08-10 21:51:50
+lastsearch = 2024-08-10 23:52:14
 
 [demxanh.com]
 match = 11.8%%
@@ -13,8 +13,8 @@ url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = -2.9%%
-title = Chiếu điều hoà cao su non, chiếu điều hoà tặng kèm gối ...
-url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-chiếu-điều-hoà-tặng-kèm-gối-phòng-ngủ-cho-bé-nằm-nôi-cũi-cao-su-non-3-lớp-cao-cấp-i.51318501.25830191501?publish_id=&sp_atk=0e241c7f-0d90-45c8-81cd-63e6343f7712&xptdk=0e241c7f-0d90-45c8-81cd-63e6343f7712
+title = Chiếu điều hòa cao su non nhập khẩu nguyên chiếc (tặng ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-nhập-khẩu-nguyên-chiếc-(tặng-kèm-2-vỏ-gối)-i.14181335.2002294679
 
 [foreverbedding.net]
 match = 32.4%%
