--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-10 17:24:12
+lastsearch = 2024-08-10 23:47:59
 
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOopkfUVLI-Eyq8MpUkDon-X_HtLZnR92pP8z3wUJ8KUg_8N5-Mjb
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
 match = -5.6%%
@@ -54,7 +54,7 @@ url = https://www.tiktok.com/discover/nem-nuong-air-fryer?lang=en
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOorq0UNb0biDAH-98WBhuyyKNBAg17Dtf_mTz7hPOvtYtB4f7CXo
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
 match = -122.2%%
