--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-10 18:47:18
+lastsearch = 2024-08-11 00:39:10
 
 [www.facebook.com]
 match = -164.7%%
@@ -14,12 +14,12 @@ url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-o
 [www.teadrunk.com]
 match = -100.0%%
 title = Buy Chan Cha Red Tea | Chinese Loose Leaf Tea
-url = https://www.teadrunk.com/products/red-tea-chan-cha
+url = https://www.teadrunk.com/products/red-tea-chan-cha?srsltid=AfmBOorgczbrbPOJ3d2QZMpk-zudJgtXLmEb52g8v3z6E5K6vXcit1Oj
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Chăn Mao Tân 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-mao-tan-4kg.html
+url = https://www.diepxuan.com/chan-mao-tan-4kg.html?srsltid=AfmBOop14jiFD60iJY1myYXy__J57s99eenfJW8zprPbU8wzRb9GtQ8k
 
 [m.facebook.com]
 match = -194.1%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -147.1%%
-title = Polymorphism of the COMT, MAO, DAT, NET and 5-HTT ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3924247/
+match = -200.0%%
+title = Seeing the unseen of Chinese herbal medicine processing ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
 match = -217.6%%
