--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-10 18:36:49
+lastsearch = 2024-08-11 00:34:03
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
 url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 
 [www.lazada.vn]
-match = -119.0%%
-title = [SIZE LỚN 1.8x2m] Chiếu điều hoà sợi mây chiếu ngủ văn ...
-url = https://www.lazada.vn/products/size-lon-18x2m-chieu-dieu-hoa-soi-may-chieu-ngu-van-phong-chat-lieu-soi-may-tong-hop-thoang-mat-chieu-ngu-van-phong-i1758917727.html
+match = -81.0%%
+title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
 match = -42.9%%
@@ -632,9 +632,9 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = -9.5%%
-title = Sự phát triển của thai nhi tuần 23
-url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-23-vi
+match = 0.0%%
+title = Sự phát triển của thai nhi tuần 4
+url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-4-vi
 
 [www.hcmcpv.org.vn]
 match = -104.8%%
