--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-10 22:23:44
+lastsearch = 2024-08-11 00:44:20
 
 [burningman.org]
 match = -60.0%%
@@ -22,8 +22,8 @@ title = Inmate Search
 url = https://www.hcso.org/justice-center-services/inmate-search/
 
 [desaulnier.house.gov]
-match = 0.0%%
-title = 
+match = -180.0%%
+title = Congressman Mark Desaulnier | Representing the 10th ...
 url = http://desaulnier.house.gov/
 
 [account.microsoft.com]
@@ -194,7 +194,7 @@ url = https://max.adobe.com/
 [www.uniqlo.com]
 match = -233.3%%
 title = Women's, Men's and Kids' Clothing & Accessories | UNIQLO US
-url = https://www.uniqlo.com/us/en/?srsltid=AfmBOoqeQS5Ksl30efFZtNbxzl9gP1ZKdHWQ20n6oDreEbyWS4SsoSGy
+url = https://www.uniqlo.com/us/en/?srsltid=AfmBOoqyto4NpPMa9lqZdrVpAMB2nm0IyNl02QVh3REfDeOYp4Vj4XdY
 
 [facebookuserprivacysettlement.com]
 match = -100.0%%
