--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-10 20:02:36
+lastsearch = 2024-08-11 00:35:06
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và ...
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -121.4%%
-title = André Rieu - The Beautiful Blue Danube
-url = https://www.youtube.com/watch?v=IDaJ7rFg66A
+match = -200.0%%
+title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
+url = https://www.youtube.com/watch?v=7yEnuxJqQKg
 
 [www.reddit.com]
 match = -64.3%%
@@ -82,14 +82,14 @@ title = 10 Natural Ways to Build Healthy Bones
 url = https://www.healthline.com/nutrition/build-healthy-bones
 
 [en.wikipedia.org]
-match = 7.1%%
-title = Color blindness
-url = https://en.wikipedia.org/wiki/Color_blindness
+match = -20.0%%
+title = Green card
+url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = -7.1%%
-title = The Green Mile (1999)
-url = https://www.imdb.com/title/tt0120689/
+match = 7.1%%
+title = The Mask (1994)
+url = https://www.imdb.com/title/tt0110475/
 
 [www.boundless.com]
 match = -128.6%%
