--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-10 20:53:25
+lastsearch = 2024-08-11 00:32:15
 
 [www.everonvn.vn]
 match = 80.8%%
@@ -64,7 +64,7 @@ url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 [everon.com.vn]
 match = -19.2%%
 title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
-url = https://everon.com.vn/dem-lo-xo-pocket-pops/
+url = https://everon.com.vn/dem-lo-xo-pocket-pops/?srsltid=AfmBOopDyBSut-TJz3MmQV69lMjJBidtUL0zrgE530-sKNJFRcK9jCD_
 
 [demxanh.com]
 match = -19.2%%
