--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-10 15:28:57
+lastsearch = 2024-08-11 00:42:36
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -47,9 +47,9 @@ title = keznit racism allegations
 url = https://www.vlr.gg/343018/keznit-racism-allegations
 
 [www.quora.com]
-match = -87.0%%
-title = I'm 15 years old and I'm not Korean. I'm American but ...
-url = https://www.quora.com/Im-15-years-old-and-Im-not-Korean-Im-American-but-I-wanted-to-have-a-future-in-Korea-Is-it-possible-Im-also-a-girl
+match = -73.9%%
+title = What do French people think of South Korea and ...
+url = https://www.quora.com/What-do-French-people-think-of-South-Korea-and-South-Korean-people
 
 [www.youtube.com]
 match = -113.0%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -60.9%%
+title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
+url = https://en.yna.co.kr/view/AEN20130109006800325
 
 [www.usmcu.edu]
 match = -104.3%%
