--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-10 22:26:51
+lastsearch = 2024-08-11 00:31:56
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -57,9 +57,9 @@ title = Spencer Behr, MD
 url = https://profiles.ucsf.edu/spencer.behr
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Exercise in patients with inflammatory bowel diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
+match = -165.0%%
+title = End binding-3 inhibitor activates regenerative program in ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10591057/
 
 [profiles.ucla.edu]
 match = -41.7%%
