CI images update

--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-10 20:56:09
+lastsearch = 2024-08-11 00:52:11
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = https://www.google.com/maps/@10.8519007,106.629377...
 url = https://www.google.com/maps/@10.8519007,106.6293774,16.92z?hl=vi-VN
 
 [m.facebook.com]
-match = -33.3%%
-title = tìm trẻ lạc d2 NGT Long Biên✌️✌️✌️✌️✌️
-url = https://m.facebook.com/groups/HocSinhHN/posts/1619809158664939/
+match = -200.0%%
+title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
+url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
 
 [dieuhanhgiaothong-sgtvt.hochiminhcity.gov.vn]
 match = -126.7
@@ -232,9 +232,9 @@ title = DANH SÁCH CÁC TỈNH THÀNH CÓ CƠ SỞ Y TẾ ĐƯỢC ...
 url = https://www.manulife.com.vn/content/dam/insurance/vn/documents/service-docs/quyen-loi-hop-dong-bao-hiem/danh-sach-bao-lanh-vien-phi-tai-viet-nam.pdf
 
 [www.instagram.com]
-match = -220.0%%
-title = The B6 Hà Nội - Đồ Hàn | Có lương về tự dưng thấy ăn ...
-url = https://www.instagram.com/theb6.hanoi/p/C70XOHXvqJ3/
+match = -273.3%%
+title = The B6 Hà Nội - Đồ Hàn | Lạc vào bếp bánh thơm mùi bơ sữa và ...
+url = https://www.instagram.com/p/CFD27fHldDQ/
 
 [luatvietnam.vn]
 match = -240.0%%
@@ -455,4 +455,9 @@ url = http://timbus.vn/fleets.aspx
 match = -246.7%%
 title = Top các địa điểm leo núi đá nhân tạo trong nhà ở Sài Gòn ...
 url = https://jumparena.vn/blogs/news/top-cac-dia-diem-leo-nui-da-nhan-tao-trong-nha-o-sai-gon-2023
+
+[www.airbnb.com.mt]
+match = -173.3%%
+title = Apartment vacation rentals in Phú Thuận - Airbnb
+url = https://www.airbnb.com.mt/phu-thuan-vietnam/stays/apartments
 
