--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -47,8 +47,8 @@ title = Người dân phấn khởi, vui mừng khi nhận lương hưu, trợ .
 url = https://nhandan.vn/nguoi-dan-phan-khoi-vui-mung-khi-nhan-luong-huu-tro-cap-bao-hiem-xa-hoi-theo-muc-moi-post817050.html
 
 [pctravinh.evnspc.vn]
-match = -104.8%%
-title = An toàn & tiết kiệm điện - Công Ty Điện Lực Trà Vinh
+match = -90.5%%
+title = Trang thông tin điện tử - Công Ty Điện Lực Trà Vinh
 url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000041
 
 [baoapbac.vn]
@@ -532,9 +532,9 @@ title = Giá vàng: Trang chủ
 url = https://giavang.pnj.com.vn/
 
 [hanoionline.vn]
-match = -81.0%%
-title = Quận Cầu Giấy tổ chức ngày hội toàn dân bảo vệ ANTQ
-url = https://hanoionline.vn/video/quan-cau-giay-to-chuc-ngay-hoi-toan-dan-bao-ve-antq-257577.htm
+match = -52.4%%
+title = Đường ngõ xuống cấp 'bẫy' người đi đường
+url = https://hanoionline.vn/video/duong-ngo-xuong-cap-bay-nguoi-di-duong-257708.htm
 
 [laodong.vn]
 match = -109.5%%
