--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -72,9 +72,9 @@ title = Topper - Tấm tiện nghi nệm - Bảo vệ nệm - Kho nệm
 url = https://khonem.com/topper--tam-tien-nghi-nem--bao-ve-nem.html
 
 [tiki.vn]
-match = -100.0%%
-title = Topper everon hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=topper everon
+match = -87.5%%
+title = Topper nệm hàng chính hãng, giao nhanh - Tháng 8, 2024
+url = https://tiki.vn/search?q=topper nệm
 
 [feyesperanza.my-free.website]
 match = -70.8%%
