--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-10 21:12:22
+lastsearch = 2024-08-11 00:49:46
 
 [demxanh.com]
 match = 18.2%%
@@ -18,8 +18,8 @@ url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [thegioidemonline.vn]
 match = -109.1%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
-url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
+title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội - Chăn ga gối
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
 
 [noithatkenli.vn]
 match = -27.3%%
