--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-10 23:21:06
+lastsearch = 2024-08-11 00:49:05
 
 [www.tui.co.uk]
-match = -58.3%%
-title = Asia Holidays 2024 / 2025
-url = https://www.tui.co.uk/destinations/asia/holidays-asia.html
+match = -41.7%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [uk.trip.com]
 match = -233.3%%
@@ -57,9 +57,9 @@ title = Hotel inkl. Flug Südkorea - Pauschalreisen
 url = https://www.tui.com/pauschalreisen/suedkorea/
 
 [www.linkedin.com]
-match = -200.0%%
-title = TUI
-url = https://www.linkedin.com/company/tuigroup
+match = -175.0%%
+title = TUI on LinkedIn: #meinschiff | 14 comments
+url = https://www.linkedin.com/posts/tuigroup_meinschiff-activity-7123680492704423936-d0ri
 
 [maritime-executive.com]
 match = -308.3%%
@@ -222,9 +222,9 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -75.0%%
-title = Help Center - TUI Musement
-url = https://www.tuimusement.com/us/helpcenter/
+match = -325.0%%
+title = TUI Musement: Book Tickets for Experiences and Activities ...
+url = https://www.tuimusement.com/uk/
 
 [www.dixondirectional.com]
 match = -166.7%%
