--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-10 21:57:08
+lastsearch = 2024-08-11 01:29:30
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -19,17 +19,17 @@ url = https://songhong.info/chan-ga-goi-bc16
 [demxanh.com]
 match = -19.0%%
 title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
-url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
+url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html?srsltid=AfmBOooHBlx6cUOpmGLqYke1s-6--o0omSeOv6YKB_2PCHjY0bw3hQdt
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v16
+match = -57.1%%
+title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16?srsltid=AfmBOoqP8ltTBEbk-kggoRM9x53_RF9Cm1HLi8p5_gZHUf58zuBY9I-4
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
-url = https://changagoidemsonghong.com/chan-ga-goi-bc57
+match = -38.1%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -44,7 +44,7 @@ url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-160x200.html
+url = https://www.diepxuan.com/bo-chun-xoa-160x200.html?srsltid=AfmBOooL5BcX-wMh2nXc43BXevzmQRHtzet0VvarfTN5aTez9X9vO9eV
 
 [everon365.vn]
 match = 33.3%%
