--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-11 00:39:10
+lastsearch = 2024-08-11 01:26:45
 
 [www.facebook.com]
 match = -164.7%%
@@ -14,12 +14,12 @@ url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-o
 [www.teadrunk.com]
 match = -100.0%%
 title = Buy Chan Cha Red Tea | Chinese Loose Leaf Tea
-url = https://www.teadrunk.com/products/red-tea-chan-cha?srsltid=AfmBOorgczbrbPOJ3d2QZMpk-zudJgtXLmEb52g8v3z6E5K6vXcit1Oj
+url = https://www.teadrunk.com/products/red-tea-chan-cha
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Chăn Mao Tân 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-mao-tan-4kg.html?srsltid=AfmBOop14jiFD60iJY1myYXy__J57s99eenfJW8zprPbU8wzRb9GtQ8k
+url = https://www.diepxuan.com/chan-mao-tan-4kg.html
 
 [m.facebook.com]
 match = -194.1%%
