--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-10 21:55:02
+lastsearch = 2024-08-11 01:20:54
 
 [helloviettravel.com]
 match = -187.5%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -131.2%%
-title = Tổng hợp 18 địa điểm du lịch hấp dẫn nhất Long An
-url = https://www.youtube.com/watch?v=Ddo7tfEVgrI
+match = -137.5%%
+title = Top 18 địa điểm du lịch nổi tiếng nhất Quảng Bình
+url = https://www.youtube.com/watch?v=5uVzGEgkNaY
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
