--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-08-10 23:51:57
+lastsearch = 2024-08-11 01:32:15
 
 [demxanh.com]
-match = -17.6%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -135.3%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqK7IzNskroHUlzGDROA76teehP5O1Hi1QgESWjS0g4qzDqestW
 
 [dem24h.vn]
 match = -29.4%%
