--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-10 18:11:49
+lastsearch = 2024-08-11 01:15:00
 
 [www.diepxuan.com]
 match = -14.3%%
@@ -87,8 +87,8 @@ title = Gallery
 url = http://www.lacecarriage.com/gallery2.htm
 
 [bizonauto.com]
-match = -107.1%%
-title = A school where children learn to eat better - 英语点津News ...
+match = -96.4%%
+title = News educations days A school where children learn to eat better ...
 url = https://bizonauto.com/index3.php?name=https://xn--80aqaehuekgcjc7j.xn--p1ai/3758269488fe
 
 [picclick.co.uk]
