--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-11 01:00:09
+lastsearch = 2024-08-11 01:22:15
 
 [www.zillow.com]
 match = -115.4%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -169.2%%
 title = Ga Ni Long Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/
+url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOop5xiMUHy38T4D3hkz008SxvxPeBVnPJ3mDeGl_WlIQ920wXbyK
 
 [www.njcaa.org]
 match = -140.0%%
