CI images update

--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -52,9 +52,9 @@ title = Set chiếu điều hòa cao su Tencel - NANARA
 url = https://nanara.vn/p/set-chieu-dieu-hoa-cao-su-tencel/
 
 [foreverbedding.net]
-match = 17.2%%
-title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong
+match = -37.9%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [www.diepxuan.com]
 match = 31.0%%
@@ -62,14 +62,14 @@ title = Chiếu điều hòa caosu non 2D 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html
 
 [chiaki.vn]
-match = 10.3%%
-title = Chiếu Điều Hòa Tencel Latex Cao Su Non 5D mẫu 2022
-url = https://chiaki.vn/chieu-dieu-hoa-tencel-latex-cao-su-non-5d-mau-2022
+match = 13.8%%
+title = Chiếu điều hòa cao su non Tencel Latex 2D mẫu 2022
+url = https://chiaki.vn/chieu-dieu-hoa-cao-su-non-tencel-latex-2d-mau-2022
 
 [thegioichieutruc.com]
-match = -27.6%%
-title = Chiếu điều hòa cao su non Tencel cam đất chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-cam-dat/
+match = -34.5%%
+title = Chiếu điều hòa cao su non Tencel hồng nhạt chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-hong-nhat/
 
 [changagoidemdep.vn]
 match = -27.6%%
