--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-11 00:40:54
+lastsearch = 2024-08-11 01:42:41
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -162,8 +162,8 @@ title = Giường Archives - LMG World
 url = https://lmgworld.com/danh-muc-san-pham/giuong/
 
 [xuonggoquanghuy.com]
-match = -104.5%%
-title = Giường tân cổ điển gỗ gõ đỏ Nam Phi cao cấp Quang Huy
+match = -77.3%%
+title = Giường tân cổ điển gỗ gõ đỏ Nam Phi cao cấp ...
 url = https://xuonggoquanghuy.com/san-pham/giuong-tan-co-dien-go-go-do-cao-cap/
 
 [es.pinterest.com]
