--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-10 20:24:32
+lastsearch = 2024-08-11 01:38:29
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -162.5%%
-title = Mẹo Hay Luộc Đậu Phộng Nhanh Mềm Không Thâm Đen ...
-url = https://www.youtube.com/watch?v=vVLK7BEIS-g
+match = -187.5%%
+title = Setup máy chiếu 3D cho dân bay lắc, đi cảnh, như thế nào ?
+url = https://www.youtube.com/watch?v=j4DyXxMsQoE
 
 [tuyensinh247.com]
 match = -218.8%%
