--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-10 15:48:08
+lastsearch = 2024-08-11 01:46:36
 
 [www.chieulongdinh.com.vn]
 match = -187.5%%
@@ -380,4 +380,14 @@ url = https://medlatec.vn/tin-tuc/dieu-tri-lac-noi-mac-tu-cung-bang-phuong-phap-
 match = -150.0%%
 title = Khép lại tuần lễ giá vàng nhảy múa trên thế giới
 url = https://thegioitiepthi.danviet.vn/khep-lai-tuan-le-gia-vang-nhay-mua-tren-the-gioi-20240810113447486.htm
+
+[baoapbac.vn]
+match = -100.0%%
+title = Thăng trầm Làng nghề Dệt chiếu Long Định
+url = https://baoapbac.vn/xa-hoi/202405/thang-tram-lang-nghe-det-chieu-long-dinh-1011053/index.htm
+
+[baokhanhhoa.vn]
+match = -193.8%%
+title = Ngoại hạng Anh 2024 - 2025: Câu lạc bộ nào sẽ lật đổ ...
+url = https://baokhanhhoa.vn/the-thao/the-thao-quoc-te/202408/ngoai-hang-anh-2024-2025-cau-lac-bo-nao-se-lat-do-duoc-manchester-city-674488e/
 
