--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-11 00:34:03
+lastsearch = 2024-08-11 01:38:07
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu trúc thai đen14 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-thai-den14.html
+url = https://www.diepxuan.com/chieu-truc-thai-den14.html?srsltid=AfmBOoo66SGx902tQBmT545G3xdVZG5PIF8tyBUjLzZTQtDAXW1MZ7TU
 
 [demxanh.com]
 match = -28.6%%
@@ -19,7 +19,7 @@ url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOoqIIFQi71y4y7Z5c9mWh7sEdoqAuFcnENr-Uew_60ef9P-u0zEO
 
 [tiki.vn]
 match = -42.9%%
@@ -632,9 +632,9 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = 0.0%%
-title = Sự phát triển của thai nhi tuần 4
-url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-4-vi
+match = -100.0%%
+title = Tim thai có khi nào? Thời điểm siêu âm tim thai lần đầu
+url = https://www.vinmec.com/vie/bai-viet/tim-thai-co-khi-nao-thoi-diem-sieu-am-tim-thai-lan-dau-vi
 
 [www.hcmcpv.org.vn]
 match = -104.8%%
