--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-10 20:28:44
+lastsearch = 2024-08-11 01:33:29
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -338.5%%
-title = Ayu Gani 🐘 | As a bully victim, all you feel is you want to run ...
-url = https://www.instagram.com/ganegani/p/C8hYKR_S89d/
+match = -10.0%%
+title = sylviagani
+url = https://www.instagram.com/sylviagani/?hl=en
 
 [www.nebf.com]
 match = -46.2%%
@@ -117,9 +117,9 @@ title = States that have Adopted California's Vehicle Regulations
 url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/states-have-adopted-californias-vehicle-regulations
 
 [www.deutschconnectorstore.com]
-match = -200.0%%
-title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
-url = https://www.deutschconnectorstore.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
+match = -253.8%%
+title = 0462-201-16141 | Deutsch/TE | SIze 16 Contact 20-16 Ga
+url = https://www.deutschconnectorstore.com/p-79-deutsch-0462-201-16141-contact-20-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
