--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-11 00:33:18
+lastsearch = 2024-08-11 01:42:20
 
 [dongagroup.vn]
 match = -272.7%%
@@ -69,7 +69,7 @@ url = https://shopee.vn/Kệ-Gỗ-Đầu-Giường-Kệ-2-Tầng-Đa-Năng-Trang
 [3dwarehouse.sketchup.com]
 match = -136.4%%
 title = GIUONG MAN - 3D Warehouse - SketchUp
-url = https://3dwarehouse.sketchup.com/model/eba5b527-24ac-4932-9b5f-e745fe84fe9b/GIUONG-MAN?hl=zh-CN
+url = https://3dwarehouse.sketchup.com/model/eba5b527-24ac-4932-9b5f-e745fe84fe9b/GIUONG-MAN?hl=hu
 
 [www.ducloi.vn]
 match = -172.7%%
@@ -92,9 +92,9 @@ title = Giường 2mx2m2 hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
-match = -200.0%%
-title = Có bán Ga giường tại Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/bed-sheets/?locale=vi_VN
+match = -272.7%%
+title = Giường & khung giường cỡ lớn gần Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/king-bed-frames/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
