--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-08-10 23:20:24
+lastsearch = 2024-08-11 01:41:17
 
 [shopee.vn]
 match = -216.7%%
@@ -57,8 +57,8 @@ title = BỘ GHẾ ĐƠN MODEL 01
 url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
-match = -266.7%%
-title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có viền
+match = -258.3%%
+title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có ...
 url = https://www.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html
 
 [vn.my-best.com]
@@ -192,7 +192,7 @@ title = Thảm phủ ghế sofa
 url = https://flexhouse.vn/tu-khoa-san-pham/tham-phu-ghe-sofa
 
 [cuahangtcs.com]
-match = -291.7%%
-title = Máy giặt cầm tay Xiaomi Deerma BY200 giặt sofa, thảm, nệm
+match = -316.7%%
+title = Máy giặt cầm tay Xiaomi Deerma BY200 giặt sofa, thảm, ...
 url = https://cuahangtcs.com/products/may-giat-cam-tay-xiaomi-deerma-by200-giat-sofa-tham-nem
 
