--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-11 00:16:19
+lastsearch = 2024-08-11 01:45:31
 
 [www.dem365.vn]
-match = -81.0%%
-title = Chăn Phao Siêu Nhẹ Mẫu Mã Đa Dạng - Chăn Ga Gối Đệm 365
-url = https://www.dem365.vn/chan/chan-phao-mau-ma-da-dang-de-lua-chon/
+match = -61.9%%
+title = Chăn Giá Rẻ Chăn Phao Siêu Nhẹ - Chăn Ga Gối Đệm 365
+url = https://www.dem365.vn/chan-gia-re-chan-phao-sieu-nhe/
 
 [www.demgiare.net]
 match = -4.8%%
@@ -17,9 +17,9 @@ title = Chăn phao Poly giá rẻ giá 200k, 250k
 url = https://www.demgiare.net/chan-phao-poly-gia-re.html
 
 [shopee.vn]
-match = -114.3%%
-title = Chăn phao trần bông dày loại 1 bông hơi siêu nhẹ cao cấp ...
-url = https://shopee.vn/Chăn-phao-trần-bông-dày-loại-1-bông-hơi-siêu-nhẹ-cao-cấp-được-chọn-màu-i.78513158.5470278231
+match = -85.7%%
+title = Chân cắm phao ( rẻ vô địch ), chân cắm phao câu đài màu ...
+url = https://shopee.vn/product/61795016/24261490289
 
 [suongtuyet.com]
 match = 28.6%%
@@ -39,7 +39,7 @@ url = https://www.youtube.com/watch?v=ZjibqQJbDZY
 [www.lazada.vn]
 match = -76.2%%
 title = Chăn Mền Phao Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-men-phao/
+url = https://www.lazada.vn/tag/chan-men-phao/?srsltid=AfmBOop7yYOaXX37ccDM0-KCfe4oVpEA4kvipOSSj9rR1LFXaYJaTngl
 
 [docauquanghuy.com]
 match = -33.3%%
