--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-11 00:26:00
+lastsearch = 2024-08-11 01:55:18
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -295,4 +295,9 @@ url = https://tapchiyhocvietnam.vn/index.php/vmj/article/download/9971/8807/1774
 match = 12.0%%
 title = truyền thống cảng đà nẵng
 url = https://danangport.com/wp-content/uploads/2018/08/TruyenThongCang.pdf
+
+[thesplendidlifestyle.com]
+match = -42.9%%
+title = Take A Break From The Monotonous Life At Nando's ...
+url = https://thesplendidlifestyle.com/take-break-monotonous-life-nandos-restaurant-punjabi-bagh/
 
