--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-11 01:29:09
+lastsearch = 2024-08-11 01:46:11
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -22,14 +22,14 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = 17.9%%
-title = CHIẾU TRÚC QUẾ LÂM MẮT NGỌC KHÔNG HOA VĂN ...
-url = https://shopee.vn/CHIẾU-TRÚC-QUẾ-LÂM-MẮT-NGỌC-KHÔNG-HOA-VĂN-HÀNG-LOẠI-1-BÓNG-ĐẸP-i.444652147.14296554126
+match = 42.9%%
+title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
 
 [demxanh.com]
-match = -7.1%%
-title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
-url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
+match = -25.0%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [tiki.vn]
 match = -39.3%%
