--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-08-10 22:44:32
+lastsearch = 2024-08-11 01:50:44
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,12 +24,12 @@ url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoqxmfoZcUPX9azHiQZg6D7fGNE-FTo37nJnLeVMYI3gzLyRMdt-
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -85.7%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOoqzs8pYAZcG_L4-KZXUGbqKHhDvaaXC-Qu_m6hsyMCZyrO36Bsk
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [chieutruc.info]
 match = -71.4%%
