--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-11 00:43:59
+lastsearch = 2024-08-11 01:47:57
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/GA-CHỐNG-THẤM-CAO-CẤP-2m-x-2m2-i.236450460.2102376
 [www.lazada.vn]
 match = -136.8%%
 title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
-url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html?srsltid=AfmBOor2vavBfxYuBcS4OyHoQWv1deyAuxadoRaNx1jzgH5Flrv_XzU_
+url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html?srsltid=AfmBOooLMtyTX5q1-tuCRIPLO5kJUg_KJcqKYrVfHEWUkmWsj8gc0D7G
 
 [demgiare.net]
 match = 5.3%%
@@ -47,9 +47,9 @@ title = Ga giường chống thấm nước hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=ga giường chống thấm nước
 
 [goodmamastore.com]
-match = -63.2%%
-title = Ga Chống Thấm Goodmama - Họa tiết Lá Đại
-url = https://goodmamastore.com/products/ga-chống-thấm-goodmama-hinh-hoa-day-xanh
+match = -94.7%%
+title = Ga chống thấm Goodmama - Mẫu Thỏ hồng dễ thương
+url = https://goodmamastore.com/products/ga-chống-thấm-bọc-dệm-cotton-bọc-dệm-cao-cấp-goodmama-cun-hồng
 
 [www.facebook.com]
 match = -121.1%%
