--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-11 00:28:29
+lastsearch = 2024-08-11 01:44:06
 
 [munghoangphat.com]
 match = 12.0%%
 title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
 
 [tiki.vn]
-match = -8.0%%
-title = Màn đỉnh vuông hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=màn đỉnh vuông
+match = -28.0%%
+title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -36.0%%
-title = Mùng chụp tự bung đỉnh vuông cao cấp khóa to mắt dày ...
-url = https://shopee.vn/Mùng-chụp-tự-bung-đỉnh-vuông-cao-cấp-khóa-to-mắt-dày-dặn-màn-chụp-xếp-gọn-nhiều-size-i.116277580.6522803157
+match = -48.0%%
+title = Màn chụp vuông - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/vuông
 
 [www.mungbaobao.com]
 match = 48.0%%
