--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -22,9 +22,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
-match = -12.5%%
-title = Xiangling Build F2p
-url = https://www.tiktok.com/discover/xiangling-build-f2p?lang=es
+match = -187.5%%
+title = Loved meeting you guys!!! @Shab & Kassie 🥰🥰🥰🥰 We have ...
+url = https://www.tiktok.com/@hudabeauty/video/7381189370025364767
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
