--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -214,7 +214,7 @@ url = https://tomorrow.norwalkct.org/wp-content/uploads/2019/02/Complete-POCD-Dr
 [profiles.stanford.edu]
 match = -35.0%%
 title = Fei-Fei Li - Stanford Profiles
-url = https://profiles.stanford.edu/fei-fei-li
+url = https://profiles.stanford.edu/fei-fei-li/
 
 [profiles.sc-ctsi.org]
 match = -80.0%%
