--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-10 21:23:17
+lastsearch = 2024-08-11 02:44:11
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 [books.google.com]
 match = -200.0%%
 title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0v5s_2Je&sig=ACfU3U3FM7IH2KwjsqdF7onk3zLM8T60qw&hl=en&sa=X&ved=2ahUKEwi_2LmS0eiHAxXOHzQIHbNFDYoQ6AF6BAgkEAM
+url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0v6q6-Gf&sig=ACfU3U0QEB_8agz7Jxa-jRKskn1F2J6YLg&hl=en&sa=X&ved=2ahUKEwjgs57fl-uHAxUUF1kFHV9PExgQ6AF6BAgZEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -29.4%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOoopQrEv0C81KbYD9oavBqj4M6-x29KWJ_-ZQgMCA8IyVuMj3UmR
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOoq_gqG19WJjr56kj7Cpb7_5z48upKDzPBiVjmiDuUfHX3BKCRQ9
 
 [www.kvaser.cn]
 match = -5.9%%
