--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-08-10 12:13:33
+lastsearch = 2024-08-11 02:49:02
 
 [shopee.vn]
-match = -90.9%%
-title = Chiếu cói 2.2m x 2m chuẩn xịn chiếu cói thái bình chính hiệu
-url = https://shopee.vn/Chiếu-cói-2.2m-x-2m-chuẩn-xịn-chiếu-cói-thái-bình-chính-hiệu-i.18845103.7735992407
+match = 9.1%%
+title = Chiếu cói 3m Đẹp Sang Chuẩn xịn
+url = https://shopee.vn/Chiếu-cói-3m-Đẹp-Sang-Chuẩn-xịn-i.18845103.22331826526
 
 [www.facebook.com]
 match = 36.4%%
@@ -24,7 +24,7 @@ url = https://m.facebook.com/61553157173242/
 [www.lazada.vn]
 match = -9.1%%
 title = Chiếu Nhựa 2mx 3m Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/chieu-nhua-2mx-3m/
+url = https://www.lazada.vn/tag/chieu-nhua-2mx-3m/?srsltid=AfmBOoqjKt-FAJu3MyVlvYHoW-GWQLHSKH0MkubGAS2IerAl4dJOkhdt
 
 [tiki.vn]
 match = -86.4%%
