--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-11 00:10:45
+lastsearch = 2024-08-11 02:48:01
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = NỆM CAO SU THIÊN NHIÊN EVERHOME - DELUXE
 url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome-deluxe-sieu-thi-nem-com.html
 
 [demxanh.com]
-match = -14.3%%
-title = Đệm bông ép Everhome 2m giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-everhome-2m-gia-bao-nhieu.html?srsltid=AfmBOopdJWOUA1gLohWnUBxx8qJKpeWA2IFXwSRvBvdci_xCn1-nZAGF
+match = 35.3%%
+title = Everhome - Hà Nội
+url = https://demxanh.com/khan-trai-ban-khach-san.html?sort=view&brand=6
 
 [www.ebay.com]
 match = -100.0%%
@@ -27,9 +27,9 @@ title = Should an Abugida script be created for Vietnamese? ...
 url = https://www.quora.com/Should-an-Abugida-script-be-created-for-Vietnamese-An-abugida-script-in-my-opinion-will-look-cool-and-can-also-be-the-first-ever-home-grown-script-instead-of-the-forever-taking-Chinese-characters-or-the-foreign
 
 [sieuthidemonline.vn]
-match = -85.7%%
-title = Đệm cao su thiên nhiên cao cấp Lavender Everhome
-url = https://sieuthidemonline.vn/dem-cao-su-lavender/
+match = -61.9%%
+title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
+url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
 
 [thegioidemviet.vn]
 match = -119.0%%
@@ -39,7 +39,7 @@ url = https://thegioidemviet.vn/dem-hanvico/
 [www.diepxuan.com]
 match = 23.8%%
 title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html?srsltid=AfmBOorVRMXJ63Op7-Lab7wAHNn06y1vz8Lbk49rxxITrg2bfdXI0oX7
+url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -52,9 +52,9 @@ title = Đệm Bông ép Everhome Vỏ TC
 url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 
 [demviethome.vn]
-match = -52.4%%
-title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/?srsltid=AfmBOor9Gz-cnHwv1Ysy4idmZGXUlQNJOZQXtrldiOKVW0NMBAMZG_Qn
+match = -57.1%%
+title = Đệm bông ép Everhome gấm xốp giá rẻ hà nội. ...
+url = https://demviethome.vn/dem-bong-ep-everhome-gam-xop/
 
 [www.tiktok.com]
 match = -47.6%%
