CI images update

--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-11 01:17:49
+lastsearch = 2024-08-11 03:27:34
 
 [demxanh.com]
-match = 18.2%%
-title = Thảm trải giường lông cừu TLC 04
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
+match = -27.3%%
+title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -22,9 +22,9 @@ title = Thảm Sofa Biên Hòa
 url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
-match = -40.9%%
-title = Ga chống thấm Olympia cotton cao cấp mới
-url = https://demolympia.com/ga-chong-tham-olympia-cotton-cao-cap-moi/
+match = -31.8%%
+title = Ga chống thấm Olympia cotton cao cấp
+url = https://demolympia.com/ga-chong-tham-olympia-cotton-cao-cap/
 
 [thegioidemonline.vn]
 match = -50.0%%
@@ -72,9 +72,9 @@ title = Thảm lông trải sàn lót sàn phòng khách trải giường phòng
 url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-giường-phòng-ngủ-thảm-lông-trắng-loang-mịn-chụp-ảnh-hình-tròn-vuông-1m6x2m-i.472596491.3194973741
 
 [www.kymdan.com]
-match = -68.2%%
-title = Vỏ bọc Kymdan UltimateCare (dùng cho nệm Xếp)
-url = https://www.kymdan.com/san-pham/vo-boc-nem-xep-kymdan-ultimatecare
+match = -18.2%%
+title = Nệm (mattress) Kymdan Deluxe
+url = https://www.kymdan.com/san-pham/nem-kymdan-deluxe
 
 [noithatkenli.vn]
 match = -27.3%%
@@ -132,9 +132,9 @@ title = Habitación Avileña Tropical en Aguadulce, Almería
 url = https://www.booking.com/hotel/es/habitacion-avilena-tropical-en-aguadulce.vi.html&
 
 [www.facebook.com]
-match = -50.0%%
-title = Al Khail Gate renting rooms And partition
-url = https://www.facebook.com/groups/851519008860168/?locale=vi_VN
+match = -118.2%%
+title = global discount furniture outlet Benijofar, WHERE THE ...
+url = https://www.facebook.com/groups/383511379847183/?locale=vi_VN
 
 [bearsofa.com]
 match = -68.2%%
