--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-08-11 00:20:26
+lastsearch = 2024-08-11 03:39:56
 
 [www.kymdan.com]
 match = -333.3%%
@@ -17,9 +17,9 @@ title = Bộ Ga Chun Tencel Việt Á - Siêu Mát [SALE -50%%]
 url = https://thegioidemviet.vn/bo-ga-chun-he-tc08/
 
 [toanhuyen.vn]
-match = -3.1%%
-title = Bộ Chăn Ga 160x200cm Ga Chun Chần Lasante Vải Tencel
-url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-chun-chan-lasante-vai-tencel-lily-xanh-ghi/
+match = -43.8%%
+title = Chăn Ga Gối Từ 3 đến 6 triệu Archives - Nội thất Toản Huyền
+url = https://toanhuyen.vn/bo-suu-tap/chan-ga-goi-tu-3-den-6-trieu/
 
 [yeshomebedding.com]
 match = 11.5%%
@@ -112,8 +112,8 @@ title = Bộ chăn ga gối Tencel Dreamtex DTF-004 - Nệm Tuan Thao
 url = https://everonthuduc.vn/san-pham/bo-chan-ga-goi-tencel-dreamtex-dtf-004/
 
 [khodem.vn]
-match = -3.1%%
-title = Bộ chăn ga gối chun chần Tencel Maris Kim Cương
+match = -28.1%%
+title = Bộ chăn ga gối chun chần Tencel Maris Kim Cương - Kho đệm
 url = https://khodem.vn/bo-chan-ga-goi-chun-chan-tencel-maris-kim-cuong/
 
 [www.facebook.com]
