--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-11 02:21:08
+lastsearch = 2024-08-11 03:35:07
 
 [www.muji.com]
 match = -33.3%%
@@ -19,7 +19,7 @@ url = https://thegioidemviet.vn/chan-dong-long-vu-muji/
 [demxanh.com]
 match = -135.7%%
 title = Chăn tuyết Muji 01 | Chăn lông tuyết cao cấp
-url = https://demxanh.com/chan-tuyet-muji-01.html
+url = https://demxanh.com/chan-tuyet-muji-01.html?srsltid=AfmBOorBH1hCJ3a82ta-I3uInhnK_vQehkmTHBU49C8hS64WRgVBntue
 
 [www.youtube.com]
 match = -14.3%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+url = https://www.muji.us/collections/tableware?srsltid=AfmBOop7EnNyAculpgnjxhiLQlqM3K2PVOlpHGvgjZCY5-GYaclTEfj9
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/muji-rice-bran-pickle
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOorjKnBWh7LtGShuY4CC_kuHixglGGMgGI2HnAjoV2qazoPEA0NZ
 
 [sugoimart.com]
 match = -257.1%%
