--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-08-11 01:17:07
+lastsearch = 2024-08-11 03:34:46
 
 [demxanh.com]
 match = -21.7%%
 title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
-url = https://demxanh.com/chieu-truc-cao-bang.html
+url = https://demxanh.com/chieu-truc-cao-bang.html?srsltid=AfmBOooVI-YZXn799Jdh9r61LJ9Y9kFSIjGur9LVvVTJFsN1Jx_VF2zN
 
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html?srsltid=AfmBOorjeEkpaZIHkhcrEK1N-jl7l4jRMerhll3JGJAtMiZj141ryWIY
 
 [uannga.vn]
 match = 56.5%%
