--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-11 02:11:51
+lastsearch = 2024-08-11 03:42:44
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -200.0%%
-title = Jun nghĩ đội mình hạng... - Anh Trai Vượt Ngàn Chông Gai
-url = https://www.facebook.com/story.php/?story_fbid=122171128490199321&id=61555979636804
+match = -31.2%%
+title = Anh Trai Vượt Ngàn Chông Gai
+url = https://www.facebook.com/AnhTraiVuotNganChongGai/photos/ngay-lúc-này-trên-vtv3-chờ-đón-4-bài-hát-còn-lại-của-4-liên-minh-với-chủ-đề-lời-/122171069786199321/
 
 [suckhoedoisong.vn]
 match = -225.0%%
