--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-10 19:36:36
+lastsearch = 2024-08-11 03:40:59
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopE3Q7LATahIdr6BZsUUsmQmnMtmXsQFms7qnqrjLw8t6bLpQ3r
 
 [shopee.vn]
 match = -25.0%%
@@ -57,9 +57,9 @@ title = Chiếu Trúc Hạt Đen Không Viền - Hà Nội
 url = https://thegioidemviet.vn/chieu-truc-hat-den-khong-vien/
 
 [noithatbamboo.vn]
-match = 14.3%%
-title = Chiếu trúc mắt mai không viền màu vàng 120x190cm
-url = https://noithatbamboo.vn/chieu-truc-hat-1m2/chieu-truc-mat-mai-khong-vien-mau-vang-120x190cm.html
+match = 17.9%%
+title = Chiếu trúc mắt mai không viền màu vàng 80x190cm
+url = https://noithatbamboo.vn/chieu-truc-hat-8-tac/chieu-truc-mat-mai-khong-vien-mau-vang-80x190cm.html
 
 [www.lazada.vn]
 match = 3.6%%
