--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-11 00:44:20
+lastsearch = 2024-08-11 03:39:35
 
 [burningman.org]
 match = -60.0%%
@@ -194,7 +194,7 @@ url = https://max.adobe.com/
 [www.uniqlo.com]
 match = -233.3%%
 title = Women's, Men's and Kids' Clothing & Accessories | UNIQLO US
-url = https://www.uniqlo.com/us/en/?srsltid=AfmBOoqyto4NpPMa9lqZdrVpAMB2nm0IyNl02QVh3REfDeOYp4Vj4XdY
+url = https://www.uniqlo.com/us/en/
 
 [facebookuserprivacysettlement.com]
 match = -100.0%%
