--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-11 00:49:46
+lastsearch = 2024-08-11 03:33:05
 
 [demxanh.com]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Thảm ghế thảm giường - Trang 5
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [thegioidemonline.vn]
-match = -109.1%%
-title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội - Chăn ga gối
-url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
+match = -50.0%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [noithatkenli.vn]
 match = -27.3%%
